Created node script to generate tags and excerpts via ai. Updated all posts.

--- a/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
+++ b/content/posts/2020-10-24-rotf-remix-houlens-tomb.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rotf-remix-houlens-tomb"
-title: "RotF Remix: Houlen’s Tomb"
-date: "2020-10-24"
-excerpt: "Battlemap of a natural cavern with hidden tomb for use in your TTRPGs and 5th edition games."
-featured_image: "/images/optionalrule-exploring-question.webp"
+slug: rotf-remix-houlens-tomb
+title: 'RotF Remix: Houlen’s Tomb'
+date: '2020-10-24'
+excerpt: >-
+  Custom DungeonDraft battlemap for Rime of the Frostmaiden: a Horizon Walker's
+  tomb besieged by a barbarian cult with sentries, a camp, and hidden leaders.
+featured_image: /images/optionalrule-exploring-question.webp
 draft: false
 showToc: false
+tags:
+  - Rime of the Frostmaiden
+  - RPG Resources
+  - Encounters
+  - DnD 5e
 ---
 
 I created this map for a custom scenario in my Rime of the Frostmaiden Campaign using [DungeonDraft](https://dungeondraft.net/).
