--- a/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
+++ b/content/posts/2020-11-03-tresendar-manor-above-ground.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "tresendar-manor-above-ground"
-title: "Tresendar Manor Above Ground"
-date: "2020-11-03"
-excerpt: "Above group battlemap of Tresendar Manor in Phandalin from 5th edition Lost Mines of Phandever or Dragon of Icespire Peak."
-featured_image: "/images/optionalrule-escaping-fireball.webp"
+slug: tresendar-manor-above-ground
+title: Tresendar Manor Above Ground
+date: '2020-11-03'
+excerpt: >-
+  A large hilltop ruined manor battlemap for a prequel one-shot to Lost Mines of
+  Phandelver, created in DungeonDraft and sized for extended play.
+featured_image: /images/optionalrule-escaping-fireball.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - RPG Resources
+  - Encounters
 ---
 
 I created this map for a one-shot I created as a prequil to Lost Mines of Phandelver, about the recovery of [Tresendar Manor](https://forgottenrealms.fandom.com/wiki/Tresendar_Mano). It's a fairly large map. Created using [DungeonDraft](https://dungeondraft.net/).
