--- a/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
+++ b/content/posts/2020-11-21-rotf-remix-the-inkwell-taphouse-termalaine.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rotf-remix-the-inkwell-taphouse-termalaine"
-title: "RotF Remix:  The Inkwell Taphouse, Termalaine"
-date: "2020-11-21"
-excerpt: "A rundown library in an old bar, fantastic location for use in your 5th edition Icewind Dale Rime of the Frostmaiden game."
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
+slug: rotf-remix-the-inkwell-taphouse-termalaine
+title: 'RotF Remix:  The Inkwell Taphouse, Termalaine'
+date: '2020-11-21'
+excerpt: >-
+  Decrepit roadside brewery turned ad hoc library battlemap, with a damp,
+  coughing halfling keeper and research granting advantage on local lore checks.
+featured_image: /images/optionalrule-exploring-encumbered.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - RPG Resources
+  - Rime of the Frostmaiden
+  - Lore
 ---
 
 A ramshackle and squat two story stone building made held together by rotting timbers, with opaque frosted windows and a dilapidated tiled roof. It sits on a side road along the edge of town slightly northeast of the road to Targos.  This is a standard 25x25 battlemap I created for my Rime of the Frostmaiden camapgin, I hope you can use it too.
