--- a/content/posts/2020-11-28-winter-camp-map.mdx
+++ b/content/posts/2020-11-28-winter-camp-map.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "winter-camp-map"
-title: "Winter Camp Map"
-date: "2020-11-28"
-excerpt: "A winter camp battlemap for use in your TTRPG and 5th edition games."
-featured_image: "/images/optionalrule-escaping-wound.webp"
+slug: winter-camp-map
+title: Winter Camp Map
+date: '2020-11-28'
+excerpt: >-
+  Snowy campsite battlemap for Rime of the Frostmaiden: a 25x25 grid at 5 ft per
+  100 px, ideal for random encounters and quick drop-in play.
+featured_image: /images/optionalrule-escaping-wound.webp
 draft: false
 showToc: false
+tags:
+  - Rime of the Frostmaiden
+  - DnD 5e
+  - RPG Resources
+  - Encounters
 ---
 
 I created this map for a camp based random encounter from my Rime of the Frostmaiden campaign using [DungeonDraft](https://dungeondraft.net/).  It's a standard 25x25 battlemap with five feet distance per 100 px. I hope you'll get some use out of this for your game too.
