--- a/content/posts/2020-11-30-icewind-dale-npc-beldora-nine-dogs.mdx
+++ b/content/posts/2020-11-30-icewind-dale-npc-beldora-nine-dogs.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "icewind-dale-npc-beldora-nine-dogs"
-title: "Icewind Dale NPC: Beldora Nine-Dogs"
-date: "2020-11-30"
-excerpt: "Silent and mysterious leader of The Harpers faction in Bryn Shander for your 5th edition Icewind Dale Rime of the Frostmaiden game."
-featured_image: "/images/beldrora_ninedogs-414x585.jpg"
+slug: icewind-dale-npc-beldora-nine-dogs
+title: 'Icewind Dale NPC: Beldora Nine-Dogs'
+date: '2020-11-30'
+excerpt: >-
+  A stoic, scarred sled dog trainer and secret Harper leader in Bryn Shander,
+  she speaks little, uses dogs and messengers, and fiercely shields her agents.
+featured_image: /images/beldrora_ninedogs-414x585.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - RPG Resources
+  - Rime of the Frostmaiden
+  - Lore
 ---
 
  An NPC I fleshed out for my Icewind Dale: Rime of the Frostmaiden campaign.  She is the silent and secretive leader of The Harpers in Icewind dale, dedicated to keeping the faction members safe in the wake of assassinations years ago.
