--- a/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
+++ b/content/posts/2020-12-09-rime-of-the-frostmaiden-remixes.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rime-of-the-frostmaiden-remixes"
-title: "Rime of the Frostmaiden Remixes"
-date: "2020-12-09"
-excerpt: "Thoughts on why remixes are so important for 5th edition Icewind Dale Rime of the Frostmaiden."
-featured_image: "/images/optionalrule-escaping-fireball.webp"
+slug: rime-of-the-frostmaiden-remixes
+title: Rime of the Frostmaiden Remixes
+date: '2020-12-09'
+excerpt: >-
+  A DM shares plans for a series of practical remixes, showing how to tweak
+  Icewind Dale’s 5e adventure for pacing, balance, and table needs.
+featured_image: /images/optionalrule-escaping-fireball.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Rime of the Frostmaiden
+  - RPG Resources
 ---
 
 Remixes have become a great way for DMs to talk about how they are using published content in the wild for their actual 5th edition games. It focuses on how you arrange or change the elements to suit your individual game and style, and avoids the o-so-very-internet thing of labeling things as broken or awesome.
