--- a/content/posts/2020-12-21-no-racism-is-not-required-in-a-fantasy-world.mdx
+++ b/content/posts/2020-12-21-no-racism-is-not-required-in-a-fantasy-world.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "no-racism-is-not-required-in-a-fantasy-world"
-title: "No, racism is not required in a fantasy world"
-date: "2020-12-21"
-excerpt: "A discussion of why racial essentialism is not needed, does not add anything, and hurts in 5th edition TTRPGs"
-featured_image: "/images/optionalrule-escaping-fireball.webp"
+slug: no-racism-is-not-required-in-a-fantasy-world
+title: 'No, racism is not required in a fantasy world'
+date: '2020-12-21'
+excerpt: >-
+  Using safety tools and rejecting racial essentialism, we help new D&D players
+  see that engaging, respectful fantasy play works without bigotry.
+featured_image: /images/optionalrule-escaping-fireball.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Community
+  - Philosophy
 ---
 
 I had one of those unpleasant exchanges on a Dungeons & Dragons 5e group the other day, where you offer some resource that works for you and someone comes out of left field and goes on a racist tirade. It's social media and I'm pretty good at ignore things like that personally, but the idea that folks new to the hobby might not realize the cheap tactics and toxic behavior behind replies like the one I got.
