--- a/content/posts/2020-12-22-thrilling-heroics-rules-for-dd-5e.mdx
+++ b/content/posts/2020-12-22-thrilling-heroics-rules-for-dd-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "thrilling-heroics-rules-for-dd-5e"
-title: "Thrilling Heroics Rules for D&D 5e"
-date: "2020-12-22"
-excerpt: "Add more dynamic and thrilling heroics to your 5th edition game with these rules."
-featured_image: "/images/grog_by_nickroblesart-384x301.jpg"
+slug: thrilling-heroics-rules-for-dd-5e
+title: Thrilling Heroics Rules for D&D 5e
+date: '2020-12-22'
+excerpt: >-
+  Add swashbuckling flair to 5e with ad hoc stunts that trade risk for reward,
+  using clear DCs, balanced effects, and examples to guide fair play.
+featured_image: /images/grog_by_nickroblesart-384x301.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - DM Advice
+  - Mechanics
 ---
 
 Thrilling heroics have always been an important part of adventuring in table-top roleplaying games. The rules of 5th edition are great for covering most basic action but occasionally players want something more exciting to happen. The swashbuckler may want to distract opponents by kicking the table at them, or the cavalier leaps from their charging horse to make a more devastating attack, this is all part of thrilling heroic action at the heart of adventure based roleplaying games.
