--- a/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
+++ b/content/posts/2020-12-24-rotf-remix-lake-monster.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rotf-remix-lake-monster"
-title: "RotF Remix: Lake Monster"
-date: "2020-12-24"
-excerpt: "A reworking of the Lake Monster quest from 5th edition Icewind Dale Rime of the Frostmaiden."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: rotf-remix-lake-monster
+title: 'RotF Remix: Lake Monster'
+date: '2020-12-24'
+excerpt: >-
+  A Frostmaiden quest remix: an awakened plesiosaur coerced by frost druids
+  menaces Bremen, with investigation hooks, parley options, and a cave assault.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Rime of the Frostmaiden
+  - Encounters
+  - DM Advice
 ---
 
 This post contains the remixes and changes I used for the Lake Monster quest picked up in the town of Bremen in [Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden). It runs similarly to what is written in the module with a different backstory, delivery and climax. You can likely use this remix as an independent encounter in any game, but to get the most out of it you will need the module.
