--- a/content/posts/2021-01-02-tools-for-effecting-rolls-in-dd.mdx
+++ b/content/posts/2021-01-02-tools-for-effecting-rolls-in-dd.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "tools-for-effecting-rolls-in-dd"
-title: "Tools to Affect Rolls in D&D"
-date: "2021-01-02"
-excerpt: "An analysis and ranking of different roll effecting mechanisms in 5th edition TTRPGs."
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
+slug: tools-for-effecting-rolls-in-dd
+title: Tools to Affect Rolls in D&D
+date: '2021-01-02'
+excerpt: >-
+  Compares 5e roll modifiers—add vs replace—ranked for normal and crittable
+  checks, with simulations showing Elven Accuracy, advantage, cover, and luck
+  impacts.
+featured_image: /images/optionalrule-exploring-encumbered.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
+  - House Rules
 ---
 
 Owing to a small thread on [twitter](https://twitter.com/optionalrule/status/1345183662703337472) earlier this week, I listed out the options 5th Edition Dungeons and Dragons provides for effecting rolls. This is useful for creating your own roll effecting homebrew rules, if you want to understand the relative power level compared to other elements in the ruleset.
