--- a/content/posts/2021-01-03-progressive-failures-and-rising-tension-in-5th-edition.mdx
+++ b/content/posts/2021-01-03-progressive-failures-and-rising-tension-in-5th-edition.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "progressive-failures-and-rising-tension-in-5th-edition"
-title: "Progressive Failures and Rising Tension in 5th Edition"
-date: "2021-01-03"
-excerpt: "Methods to build tension and excitement with failures and successes in your 5th edition TTRPG."
-featured_image: "/images/skillcheck-480x363.jpg"
+slug: progressive-failures-and-rising-tension-in-5th-edition
+title: Progressive Failures and Rising Tension in 5th Edition
+date: '2021-01-03'
+excerpt: >-
+  Proposes a rule-of-three progressive failure framework for 5e skill checks to
+  build tension, preserve agency, and avoid swingy all-or-nothing outcomes.
+featured_image: /images/skillcheck-480x363.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - House Rules
 ---
 
 5th edition Dungeons and Dragons has a bit of a rough patch with its skill checks model. Given the variability of a d20, all or nothing skill checks can be a fairly harsh mechanic. Indeed, there's some evidence all or nothing checks is not the designers intent. The DMG Chapter 8 provides some alternative methods to consider with skill resolution under [Resolution and Consequences](https://www.dndbeyond.com/sources/dmg/running-the-game#ResolutionandConsequences) which all hinge on a single die roll mechanic. In cases, there may be some utility using a progressive success or failure system instead of a single checks. Particularly in non-combat encounters, it is best to build skill checks in a way to build tension from failure rather than a collapse. [DMDavid](https://dmdavid.com/) sparked a thought after a specific example [posted on twitter](https://twitter.com/optionalrule/status/1345790204758679556), how to handle falling with failed climbing checks. Progressive failure and rising tension meshes well with the [Thrilling Heroics Rules](/2020/12/22/thrilling-heroics-rules-for-dd-5e/) I posted awhile back. In fact, it compliments it enough that I thought it useful to post some examples here.
