--- a/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
+++ b/content/posts/2021-01-04-rotf-remix-heart-of-winter-supernatural-regions.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rotf-remix-heart-of-winter-supernatural-regions"
-title: "RotF Remix: Heart of Winter Supernatural Regions"
-date: "2021-01-04"
-excerpt: "Winter themed supernatural region effects to use in your 5th edition Icewind Dale Rime of the Frostmaiden game."
-featured_image: "/images/optionalrule-escaping-wound.webp"
+slug: rotf-remix-heart-of-winter-supernatural-regions
+title: 'RotF Remix: Heart of Winter Supernatural Regions'
+date: '2021-01-04'
+excerpt: >-
+  Introduce volatile planar cold zones in Icewind Dale with triggers and a d100
+  table of chilling effects to reshape rests, spells, and encounters.
+featured_image: /images/optionalrule-escaping-wound.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Rime of the Frostmaiden
+  - Mechanics
+  - RPG Resources
 ---
 
 With the publication of Tasha's Caldron of Everything, the game introduced the concepts of Supernatural Regions to 5th edition Dungeons and Dragons. Areas that have variable and mysterious effects that might be invoked by specific actions or conditions. Within Icewind Dale are localized arcane phenomenon zones said to manifest The Heart of Winter, that is the conjunction of planar regions brought into alignment with Icewind Dale as a function of Auril's ongoing enchantments. Small clusters of these supernatural phenomenon ebb and flow across the region and it has been growing in frequency, intensity, and size as time progresses.
