--- a/content/posts/2021-01-07-simulating-great-weapon-fighter-damage.mdx
+++ b/content/posts/2021-01-07-simulating-great-weapon-fighter-damage.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "simulating-great-weapon-fighter-damage"
-title: "Simulating Sadness: Great Weapon Fighter Damage"
-date: "2021-01-07"
-excerpt: "An breakdown and analysis of the outcomes of different options related to the Great Weapon Fight feat in 5th edition."
-featured_image: "/images/grog_by_nickroblesart-384x301.jpg"
+slug: simulating-great-weapon-fighter-damage
+title: 'Simulating Sadness: Great Weapon Fighter Damage'
+date: '2021-01-07'
+excerpt: >-
+  Analyzes GWF and Champion crits in 5e using math and simulations, finding
+  modest damage gains and evaluating common house rules.
+featured_image: /images/grog_by_nickroblesart-384x301.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
+  - House Rules
 ---
 
 I have always had a bit of doubt about the overall benefit of the Great Weapon Fighter fighting style and the Improved Critical ability for Champions in 5th Edition Dungeons and Dragons, so I dig into it a bit below. 
