--- a/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
+++ b/content/posts/2021-01-08-be-friends-with-your-roleplaying-group.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "be-friends-with-your-roleplaying-group"
-title: "Be Friends with your Roleplaying Group"
-date: "2021-01-08"
-excerpt: "Why friendship is so important for TTRPG groups and in 5th edition games."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: be-friends-with-your-roleplaying-group
+title: Be Friends with your Roleplaying Group
+date: '2021-01-08'
+excerpt: >-
+  RPGs ask for vulnerability, so invest in real friendship with players and your
+  DM—chat, bond, and see the people behind characters to strengthen the table.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - Community
+  - DM Advice
+  - Philosophy
 ---
 
 I will write a whole post someday on the importance of friendship in Tabletop Roleplaying groups. Today though I want to capture two tweets I made because I don't think you can ever say this enough. 
