--- a/content/posts/2021-01-11-icewind-dale-npc-arnold-beitz.mdx
+++ b/content/posts/2021-01-11-icewind-dale-npc-arnold-beitz.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "icewind-dale-npc-arnold-beitz"
-title: "Icewind Dale NPC: Arnold Beitz"
-date: "2021-01-11"
-excerpt: "A evil and conniving NPC to use in your 5th edition Rime of the Frostmaiden campaign."
-featured_image: "/images/ArnoldBeitz-394x787.jpg"
+slug: icewind-dale-npc-arnold-beitz
+title: 'Icewind Dale NPC: Arnold Beitz'
+date: '2021-01-11'
+excerpt: >-
+  Elitist Waterdeep-educated magnate in Bryn Shander runs salvage and crimes for
+  the Chardalyn Syndicate, sabotaging rivals with goblins to seize the
+  speakership.
+featured_image: /images/ArnoldBeitz-394x787.jpg
 draft: false
 showToc: false
+tags:
+  - Rime of the Frostmaiden
+  - DnD 5e
+  - RPG Resources
+  - Lore
 ---
 
 This is an NPC I've used in my Rime of the Frostmaiden campaign as a foil in Bryn Shander and to introduce a political ingrique plot for the players early on in the game. 
