--- a/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
+++ b/content/posts/2021-01-12-rotf-remix-foaming-mugs.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "rotf-remix-foaming-mugs"
-title: "RotF Remix: Foaming Mugs"
-date: "2021-01-12"
-excerpt: "My modification to the Foaming Mugs quest from the 5th edition module, Rime of the Frostmaiden."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: rotf-remix-foaming-mugs
+title: 'RotF Remix: Foaming Mugs'
+date: '2021-01-12'
+excerpt: >-
+  Remix this Icewind Dale side quest with an inside-job twist, a yeti-lured
+  ambush, goblin negotiations, a haunted locale, and a secret crime-boss
+  stinger.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Rime of the Frostmaiden
+  - Encounters
+  - DM Advice
 ---
 
 This is my remix of the Foaming Mugs quest from the 5th edition Dungeons and Dragons module, [Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden). You can use this to spice up your encounter with a bit more intrigue, potential negotiation and roleplay. It also ties back to The Chardalyn Syndicate, a faction that is part of the [Far North & Ten-Towns][1] remix posted here previously. Check out the [RotF][2] and Remix tags on this site for more remixes.
