--- a/content/posts/2021-01-17-thoughts-on-the-first-issue-of-arcadia.mdx
+++ b/content/posts/2021-01-17-thoughts-on-the-first-issue-of-arcadia.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "thoughts-on-the-first-issue-of-arcadia"
-title: "Thoughts on the First Issue of Arcadia"
-date: "2021-01-17"
-excerpt: "My thoughts on the first issue of Arcadia from Matt Coleville and how to use it in 5th edition games."
-featured_image: "/images/Arcadia-1_v1.0-1_400x518.jpg"
+slug: thoughts-on-the-first-issue-of-arcadia
+title: Thoughts on the First Issue of Arcadia
+date: '2021-01-17'
+excerpt: >-
+  A practical look at how this 5e magazine adds a drop-in encounter, a sorcerer
+  subclass, mounted combat options, and fresh celestials, plus tooling quibbles.
+featured_image: /images/Arcadia-1_v1.0-1_400x518.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - RPG Resources
+  - DM Advice
+  - Mechanics
 ---
 
 Here are my thoughts on how I can use content from [Arcadia](https://shop.mcdmproductions.com/products/arcadia-issue1) in my 5th edition Dungeons and Dragons game. Arcadia is a new magazine style digital publication for 5e in the tradition of the old Dragon Magazine. In particular, the content is a useful buffet of [DM resources](/category/rpg-resources/), [adventures](/category/encounters/), and lore that enhances existing games. 
