--- a/content/posts/2021-01-19-level-up-your-game-with-these-rpgs.mdx
+++ b/content/posts/2021-01-19-level-up-your-game-with-these-rpgs.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "level-up-your-game-with-these-rpgs"
-title: "Level Up Your Game with these RPGs"
-date: "2021-01-19"
-excerpt: "Results of a survey of RPGs people recommend to expand your roleplaying and DM skills."
-featured_image: "/images/optionalrule-escaping-fireball.webp"
+slug: level-up-your-game-with-these-rpgs
+title: Level Up Your Game with these RPGs
+date: '2021-01-19'
+excerpt: >-
+  Explore a crowd-sourced list of RPG systems beyond DnD to expand your skills
+  in narration, pacing, mechanics, and new approaches to play.
+featured_image: /images/optionalrule-escaping-fireball.webp
 draft: false
 showToc: false
+tags:
+  - RPG Resources
+  - DM Advice
+  - Analysis
+  - Community
 ---
 
 Learning different RPG systems is the most useful thing a DM or player can do to up their game. Doing so teaches you all sorts of ways to approach narration, mood, play, resolutions, and any number of other skills that could be useful in a game. 
