--- a/content/posts/2021-01-21-create-captivating-traps.mdx
+++ b/content/posts/2021-01-21-create-captivating-traps.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "create-captivating-traps"
-title: "Create Captivating Traps"
-date: "2021-01-21"
-excerpt: "How to make traps fun and exciting in 5th edition games."
-featured_image: "/images/indy_480x320.jpg"
+slug: create-captivating-traps
+title: Create Captivating Traps
+date: '2021-01-21'
+excerpt: >-
+  Design traps with purpose to advance plot and energize combat, using
+  environmental challenges, skill-driven complications, and scalable DCs.
+featured_image: /images/indy_480x320.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Encounters
+  - Mechanics
 ---
 
 People are stuck in a lot of bad thinking when it comes to how to use [traps in 5th edition](https://www.5esrd.com/gamemastering/traps/) Dungeons and Dragons. Traditionally, people see traps as a way to use resources by dispensing some damage along the way. Largely, this falls flat in a 5th edition game where resting lets you recover quickly. Worse, randomly placed traps can come off as spiteful or thrown in just to annoy the players. So, if you want to make traps a more exciting part of an encounter, create traps that [drive things forward](/2021/01/03/progressive-failures-and-rising-tension-in-5th-edition/) rather than simple binary events. 
