--- a/content/posts/2021-01-24-summary-of-5e-alchemy-rules.mdx
+++ b/content/posts/2021-01-24-summary-of-5e-alchemy-rules.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "summary-of-5e-alchemy-rules"
-title: "Summary of 5e Alchemy Rules"
-date: "2021-01-24"
-excerpt: "Summarizing the alchemy and potion creation rules from across various 5th edition books for my players."
-featured_image: "/images/alchemylab-480x384.jpg"
+slug: summary-of-5e-alchemy-rules
+title: Summary of 5e Alchemy Rules
+date: '2021-01-24'
+excerpt: >-
+  Potion crafting guidelines with costs and times, Alchemist subclass tweaks,
+  mundane item recipes, and streamlined foraging and harvesting house rules.
+featured_image: /images/alchemylab-480x384.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - House Rules
+  - RPG Resources
 ---
 
 These rules are a summary of the 5e Dungeons and Dragons Alchemy and potion creation rules. These revised rules for [Crafting Magic Items][1] are presented in [Xanathar's Guide to Everything][2], modified as per the creation of expendable items. Note that those rules replace the Item Creation Rules presented in the Dungeon Masters Guide. Additionally, this summary includes modifications made for the _Alchemist_ specialty under the [Artificer][3] class.
