--- a/content/posts/2021-01-27-managing-dm-anxiety.mdx
+++ b/content/posts/2021-01-27-managing-dm-anxiety.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "managing-dm-anxiety"
-title: "Managing DM Anxiety"
-date: "2021-01-27"
-excerpt: "Recommendations for how Dungeon Masters can manage their anxiety when running TTRPGs."
-featured_image: "/images/An_anxious_Dungeon_Master_480x480.jpg"
+slug: managing-dm-anxiety
+title: Managing DM Anxiety
+date: '2021-01-27'
+excerpt: >-
+  Practical strategies for DMs to ease anxiety: seek professional support,
+  reframe self-talk, name feelings, use bodywork and prep tools, and ask your
+  table.
+featured_image: /images/An_anxious_Dungeon_Master_480x480.jpg
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Philosophy
 ---
 
 How to manage anxiety as a Dungeon Master (DM) in Dungeons and Dragons has got to be the most common question I see right after, &#8220;first time DM, any advice&#8221;. Naturally this makes sense, as being a DM sits at an intersection of a number of high anxiety pursuits. That is, it combines the difficulties of managing social groups, event planning, writing, as well as improvisation and performance. Additionally, you represent every enemy, obstacle, and challenge to a group of people who themselves may be feeling similar anxiety. Given this, it's no wonder DMs ask for advice and find anxiety to be one of the major roadblocks to running a game.
