--- a/content/posts/2021-01-29-safety-consent-rpg-checklist.mdx
+++ b/content/posts/2021-01-29-safety-consent-rpg-checklist.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "safety-consent-rpg-checklist"
-title: "Safety & Consent RPG Checklist"
-date: "2021-01-29"
-excerpt: "A checklist and more resources you can use to enhance safety and concent in your TTRPGs."
-featured_image: "/images/SafetyAndConcent.-960x540.jpg"
+slug: safety-consent-rpg-checklist
+title: Safety & Consent RPG Checklist
+date: '2021-01-29'
+excerpt: >-
+  Practical guidance and resources for using safety and consent tools in TTRPGs,
+  from setting baselines to gathering player feedback for respectful play.
+featured_image: /images/SafetyAndConcent.-960x540.jpg
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Community
+  - Philosophy
 ---
 
 The development of safety tools has been one of the more useful advancements in Tabletop Roleplaying Games in the modern era. At their heart, these tools help groups normalize expectations, level set, and understand the range of issues a particular gaming group might experience. Firstly, these tools help people understand if a game is the right one for them. Secondly, it helps shape the conversation and understanding of how to deal with different topics in a way that honors the experiences and context of everyone at the table.
