--- a/content/posts/2021-02-05-cavern-elevator-trap.mdx
+++ b/content/posts/2021-02-05-cavern-elevator-trap.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "cavern-elevator-trap"
-title: "Cavern Elevator Trap"
-date: "2021-02-05"
-excerpt: "A sinister and dynamic elevator trap you can use in your 5th edition game."
-featured_image: "/images/mineshaft_480x643.jpg"
+slug: cavern-elevator-trap
+title: Cavern Elevator Trap
+date: '2021-02-05'
+excerpt: >-
+  CR 4 elevator boulder hazard for 5e triggers mid-shaft, challenging detection,
+  lever logic, Dex saves, and Athletics with fall-risk stakes.
+featured_image: /images/mineshaft_480x643.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Encounters
+  - Mechanics
 ---
 
 [Captivating Traps](/2021/01/21/create-captivating-traps/) in 5th edition Dungeons & Dragons are more than just damage delivery gimmicks. A great trap communicates something about who created it, the danger you face, and engages the environment in exciting ways. This is an example of trap design that creates an environmental challenge with [Progressive Failures and Rising Tension](/2021/01/03/progressive-failures-and-rising-tension-in-5th-edition/) that engages character skills. I used this trap in my campaign last night to great effect and wanted to share it with the community if it's useful for you as well.
