--- a/content/posts/2021-02-09-skill-challenges-in-5e.mdx
+++ b/content/posts/2021-02-09-skill-challenges-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "skill-challenges-in-5e"
-title: "Skill Challenges in 5e"
-date: "2021-02-09"
-excerpt: "Skill challenges done the right way for 5th edition games."
-featured_image: "/images/skillcheck-480x363.jpg"
+slug: skill-challenges-in-5e
+title: Skill Challenges in 5e
+date: '2021-02-09'
+excerpt: >-
+  Clarifies what skill challenges are, sheds 4e baggage, and offers pacing and
+  resolution tools from the DMG and other systems to enrich 5e play.
+featured_image: /images/skillcheck-480x363.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - House Rules
 ---
 
 There's been a lot of contentious talk in my feed about building skills challenges in 5th Edition Dungeons and Dragons. Firstly, we need to develop a common understanding of what a skill challenge is in 5e. Secondly, we must get past the issues people have with 4th edition that make them so polarized. Thirdly, we need to focus on how different ways of resolving skills affect pace and tension. Moreover, we need to define some meaningful circumstances that let players drive the use of skills in creative ways. In these ways, we provide creative opportunities to do more than fight, and develop richer games in the process. 
