--- a/content/posts/2021-02-10-my-current-5e-house-rules.mdx
+++ b/content/posts/2021-02-10-my-current-5e-house-rules.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "my-current-5e-house-rules"
-title: "My Current 5e House Rules"
-date: "2021-02-10"
-excerpt: "A list of house rules I use in my own 5th edition game."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: my-current-5e-house-rules
+title: My Current 5e House Rules
+date: '2021-02-10'
+excerpt: >-
+  A concise set of 5e tweaks and table conventions, from exhaustion and movement
+  rulings to rest limits, feat bans, and session etiquette for smoother play.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - House Rules
+  - Mechanics
+  - DM Advice
+  - DnD 5e
 ---
 
 I get questions frequently about what house rules I'm using in my own 5th Edition Dungeons & Dragons game so I wanted to post them for everyone. I hope you'll find something useful here and tag [me on twitter](https://www.twitter.com/optionalrule) if you have a question or want to share a rule of your own.  
