--- a/content/posts/2021-02-17-engaging-players-with-magic-item-creation.mdx
+++ b/content/posts/2021-02-17-engaging-players-with-magic-item-creation.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "engaging-players-with-magic-item-creation"
-title: "Engaging Players with Magic Item Creation"
-date: "2021-02-17"
-excerpt: "Rules for making magic item component harvesting and magic item creation fun for players in 5th edition games."
-featured_image: "/images/steve_stark_480x371.jpeg"
+slug: engaging-players-with-magic-item-creation
+title: Engaging Players with Magic Item Creation
+date: '2021-02-17'
+excerpt: >-
+  Streamline 5e item crafting with recipe tracking, simple foraging and
+  harvesting checks, and CR-themed major ingredients that create proactive
+  hooks.
+featured_image: /images/steve_stark_480x371.jpeg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - House Rules
+  - Mechanics
 ---
 
 Creating your own potions and magic items can be a satisfying element of gameplay in 5th Edition Dungeons & Dragons. General guidelines for crafting different rarity items are provided in the core books, but many gaps exist. Specifically, the details of how to learn to craft items, and how to collect ingredients is left vague. While I don't think crafting needs to have a fully gamified system, having some central methodologies can keep things consistent. Notably, a set of rules that create proactive options for players can enhance their engagement with the setting. While, an understandable set of guidelines for item crafting can develop character goals and drive roleplay. Taken together, players who want to craft items can use gathering rules as a fun gameplay hook.
