--- a/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
+++ b/content/posts/2021-02-25-the-zen-of-awarding-experience-for-roleplaying.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "the-zen-of-awarding-experience-for-roleplaying"
-title: "The Zen of Awarding Experience for Roleplaying"
-date: "2021-02-25"
-excerpt: "Guidelines for how to award experience points for roleplaying encounters in your 5th edition game."
-featured_image: "/images/optionalrule-escaping-wound.webp"
+slug: the-zen-of-awarding-experience-for-roleplaying
+title: The Zen of Awarding Experience for Roleplaying
+date: '2021-02-25'
+excerpt: >-
+  A simple system scores social encounters by stakes and change, maps them to CR
+  vs party level, and awards shared XP to encourage noncombat play.
+featured_image: /images/optionalrule-escaping-wound.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - House Rules
+  - Mechanics
 ---
 
 It's a weakness of experience based advancement in 5e D&D that it directly addresses only one of the three pillars of play, combat. This forces DMs to either ignore advancement through social interaction and exploration, or create some way to include it. Ignoring it seems a bad option for a 'pillar' of play and creates a sense of wasted time. Likewise, a poorly crafted experience system for these pillars messes with pacing and play balance. Therefore, **_a simple, clear, and consistent method for including all pillars helps diversify play_** without sacrificing progress. In this post, I'm going to talk about how I do that with the social interaction pillar. So this is how I award experience for roleplaying in my campaigns.
