--- a/content/posts/2021-03-01-5e-advancement-difficulties.mdx
+++ b/content/posts/2021-03-01-5e-advancement-difficulties.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "5e-advancement-difficulties"
-title: "5e Advancement Difficulties"
-date: "2021-03-01"
-excerpt: "An analysis of the varying difficulty and pace of character leveling at different points in 5th edition."
-featured_image: "/images/relativedifficultyleveling-480x330.jpg"
+slug: 5e-advancement-difficulties
+title: 5e Advancement Difficulties
+date: '2021-03-01'
+excerpt: >-
+  Analysis of 5e XP pacing shows leveling slows then accelerates after 10th
+  level, speeding tier 3–4 play and demanding adjusted encounter design and
+  expectations.
+featured_image: /images/relativedifficultyleveling-480x330.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Analysis
+  - Mechanics
 ---
 
 Planning for how quickly players gain levels in 5e Dungeons and Dragons is a key element of campaign preparation. Using milestone advancement, the DM can select when and how a party levels up. However, in experience based systems this is generally a matter of the number and difficulties of encounters. Therefore, knowing how quickly players gain levels at different points in the game lets the DM plan better in advance. This means DMs using experience based leveling can anticipate how encounters drive the pace of their campaign.
