--- a/content/posts/2021-03-08-mounted-combat-in-5e.mdx
+++ b/content/posts/2021-03-08-mounted-combat-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "mounted-combat-in-5e"
-title: "Mounted Combat in 5e"
-date: "2021-03-08"
-excerpt: "Fun and exciting mounted combat rules to use in your 5th edition game."
-featured_image: "/images/mountedcombat-480x600.jpg"
+slug: mounted-combat-in-5e
+title: Mounted Combat in 5e
+date: '2021-03-08'
+excerpt: >-
+  House rules for D&D 5e make mounted play dynamic: training levels, riding vs
+  war mounts, shared initiative, bonding, bolting, bucking, and equipment.
+featured_image: /images/mountedcombat-480x600.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 Few things are more iconic than the image of someone charging into battle on horseback. Yet, 5e doesn't have satisfying rules to make mounted combat a fun part of play. So I created these rules to provide [thrilling options](/2020/12/22/thrilling-heroics-rules-for-dd-5e/) for mounted combat by players, while maintaining balance with existing rules and abilities. As with all rules, these are guidelines and the DM should do what is fun and fast, using what adds to the game, and ignore the rest.
