--- a/content/posts/2021-03-10-imagery-art-resources-for-rpg-creators.mdx
+++ b/content/posts/2021-03-10-imagery-art-resources-for-rpg-creators.mdx
@@ -1,11 +1,16 @@
 ---
-slug: "imagery-art-resources-for-rpg-creators"
-title: "Imagery & Art Resources for RPG Creators"
-date: "2021-03-10"
-excerpt: "A list of different art and image resources you can use when creating your TTRPG content."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: imagery-art-resources-for-rpg-creators
+title: Imagery & Art Resources for RPG Creators
+date: '2021-03-10'
+excerpt: >-
+  Curated links to stock art, free repositories, portfolio sites, and licensing
+  guides for using imagery in RPG projects, with 5e/WotC policy highlights
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - RPG Resources
+  - DnD 5e
 ---
 
 Evocative artwork and imagery is a great add to any 5e fan resource, but finding usable images can be a challenge. I aggregated this list of resources for myself to help navigate the the different resources for potentially usable artwork in RPGs. I also asked some followers on twitter for their recommendations and aggregate all of those together here. I hope you'll find something useful to help you create more works and **_honor the artists who put so much work into their own creations_**.
