--- a/content/posts/2021-03-26-thinking-critically-on-agency.mdx
+++ b/content/posts/2021-03-26-thinking-critically-on-agency.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "thinking-critically-on-agency"
-title: "Thinking Critically on Agency"
-date: "2021-03-26"
-excerpt: "Link to my interview on the Thinking Critically podcast discussing the topic of player agency in 5th edition and TTRPGs."
-featured_image: "/images/optionalrule-escaping-wound.webp"
+slug: thinking-critically-on-agency
+title: Thinking Critically on Agency
+date: '2021-03-26'
+excerpt: >-
+  An insightful discussion on player and GM agency, misconceptions, trade-offs,
+  mechanics, and the role of trust in shaping richer TTRPG experiences.
+featured_image: /images/optionalrule-escaping-wound.webp
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - Mechanics
+  - Philosophy
+  - Analysis
 ---
 
 I greatly enjoyed my recent interview on the podcast, [Thinking Critically: A D&D Discussion](https://www.thinkingcritically.co.uk/agency/). We talk about agency in games in all it's many forms, what agency is and isn't, where it ends, how it's traded, and how it interacts with game mechanics. I highly recommend the podcast for anyone running tabletop RPGs of any kind. 
