--- a/content/posts/2021-04-15-5e-spell-save-damage-breakdown.mdx
+++ b/content/posts/2021-04-15-5e-spell-save-damage-breakdown.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "5e-spell-save-damage-breakdown"
-title: "5e Spell Save & Damage Breakdown"
-date: "2021-04-15"
-excerpt: "A breakdown and analysis of spell save distribution among 5th edition spellcasters."
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
+slug: 5e-spell-save-damage-breakdown
+title: 5e Spell Save & Damage Breakdown
+date: '2021-04-15'
+excerpt: >-
+  Analyzing 477 5e spells surfaces class save trends plus damage and condition
+  profiles, offering guidance for vetting spells, subclasses, and encounters.
+featured_image: /images/optionalrule-exploring-encumbered.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
+  - DM Advice
 ---
 
 I recently started aggregating some data I've gathered about spells from 5e Dungeons & Dragons. Primarily, this has been for fun and to see if I'd find anything surprising or interesting. Additionally, I wanted to get some numbers to help me assess additional spells or subclasses for my home game. So I hope you'll find this fun and interesting yourself and I would love to hear any observations you have.
