--- a/content/posts/2021-04-21-when-failure-isnt-an-option-in-5e.mdx
+++ b/content/posts/2021-04-21-when-failure-isnt-an-option-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "when-failure-isnt-an-option-in-5e"
-title: "When Failure Isn’t an Option in 5e"
-date: "2021-04-21"
-excerpt: "Make failing skill rolls fun in 5th edition and why it is important to fail."
-featured_image: "/images/depressed_thief_480x637.jpg"
+slug: when-failure-isnt-an-option-in-5e
+title: When Failure Isn’t an Option in 5e
+date: '2021-04-21'
+excerpt: >-
+  Advice for DMs on embracing failure as a tool in 5e, avoiding stalled plots,
+  and using techniques like success-at-cost to keep play dynamic.
+featured_image: /images/depressed_thief_480x637.jpg
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - DnD 5e
+  - Mechanics
+  - Philosophy
 ---
 
 Handling failure is something people seem to struggle with in 5th edition Dungeons & Dragons. When to fail, what happens when you do, and how to keep the game moving are constant topics of discussions. In my view, [Progressive Failure and Rising Tension](/2021/01/03/progressive-failures-and-rising-tension-in-5th-edition/) is a very useful technique, but it's just one of many in the DMs toolbox. As a discussion topic, people often seem to misunderstand the role of failure in RPGs. Worse, a small sub-population has begun to take terms like 'failing-forward' to mean failure shouldn't be possible. So taking a moment to consider the options and tools available can make even failure a fun experience in TTRPGs.
