--- a/content/posts/2021-04-29-april-2021-experimental-house-rules.mdx
+++ b/content/posts/2021-04-29-april-2021-experimental-house-rules.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "april-2021-experimental-house-rules"
-title: "April 2021 Experimental House Rules"
-date: "2021-04-29"
-excerpt: "|"
-featured_image: "/images/optionalrule-escaping-fireball.webp"
+slug: april-2021-experimental-house-rules
+title: April 2021 Experimental House Rules
+date: '2021-04-29'
+excerpt: >-
+  Testing 5e rule tweaks: reaction-based Dodge with next-turn limits and
+  expanded grappling options, with community feedback invited.
+featured_image: /images/optionalrule-escaping-fireball.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - Community
 ---
 
 Like most 5th edition Dungeons & Dragons DMs, I'm constantly tinkering with the rules in hopes of improving the experience at the table. But it takes a bit of time and testing before I consider an idea worthy of officially adding to my game. As such, I've been testing out some ideas on [Twitter](https://www.twitter.com/optionalrule)for feedback. These are the various rules I've thrown out for feedback during up through the end of April 2021. After a time, if they seem worthwhile I'll officially add them to [my own house rules](https://optionalrule.com/2021/02/10/my-current-5e-house-rules/) list.
