--- a/content/posts/2021-06-07-site-migration-deployed.mdx
+++ b/content/posts/2021-06-07-site-migration-deployed.mdx
@@ -1,11 +1,16 @@
 ---
-slug: "site-migration-deployed"
-title: "Site Migration Complete"
-date: "2021-06-07"
-excerpt: "The site has been updated and under new hosting."
-featured_image: "/images/lighthouse-results-1092x921.jpg"
+slug: site-migration-deployed
+title: Site Migration Complete
+date: '2021-06-07'
+excerpt: >-
+  We migrated the site to Jekyll on GitHub Pages for a faster, more accessible
+  experience; see Lighthouse scores and DM me if you spot issues.
+featured_image: /images/lighthouse-results-1092x921.jpg
 draft: false
 showToc: false
+tags:
+  - Community
+  - Analysis
 ---
 
 Our site migration is now complete!  This should mean a much better and faster experience for everyone visiting the site.  You will have noticed it's been a bit quiet around here and this has been the reason.  The previous wordpress site was just too slow and solutions to make it faster were either too expensive or as difficult as switching hosts.  Given this is a content oriented blog and doesn't need a lot of scripting, I decided to switch over to building the site on [Jekyll](https://jekyllrb.com/) and hosting in [Github Pages](https://pages.github.com/).
