--- a/content/posts/2021-06-22-understanding-die-average-and-hitpoints.mdx
+++ b/content/posts/2021-06-22-understanding-die-average-and-hitpoints.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "understanding-die-average-and-hitpoints"
-title: "On Die Averages and Hit Points in 5e"
-date: "2021-06-22"
-excerpt: "A breakdown of how we arrive at die result average numbers, and how that can cause errors in rolling HP and designing monsters."
-featured_image: "/images/skillcheck-480x363.jpg"
+slug: understanding-die-average-and-hitpoints
+title: On Die Averages and Hit Points in 5e
+date: '2021-06-22'
+excerpt: >-
+  Explains correct dice averages and why character and monster health is
+  computed differently, with examples and a simple leveling house rule.
+featured_image: /images/skillcheck-480x363.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
+  - House Rules
 ---
 
 I've had a few conversations in the passing months about average values on dice and how that relates to hit points in 5e. Word of warning, this is about to lean hard into some nerd stuff.  However, as esoteric as this may seem, it directly effects monster design and play frequently. The biggest impact it seems to have is when people try to anticipate the outcome of a roll, worse if they design a rule around it. Also, this can result in either getting player hit points or monster hit points wrong when using average results.  The solution isn't as complex as this is going to make it seem, I'm just laying out the specifics so it's all apparent.
