--- a/content/posts/2021-06-27-gritty-healing-and-survival-rules.mdx
+++ b/content/posts/2021-06-27-gritty-healing-and-survival-rules.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "gritty-healing-and-survival-rules"
-title: "Gritty Healing & Survival in 5e"
-date: "2021-06-27"
-excerpt: "My simple gritty healing rules for 5e DnD to attend healing and add strategic gameplay."
-featured_image: "/images/camping_party_475x633.jpg"
+slug: gritty-healing-and-survival-rules
+title: Gritty Healing & Survival in 5e
+date: '2021-06-27'
+excerpt: >-
+  House rules for 5e shift healing to Hit Dice recovery, emphasize attrition,
+  resource management, and conditions, with guidance for campaigns.
+featured_image: /images/camping_party_475x633.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 The heroic playstyle of 5e D&D is a lot of fun, but it's focused on the encounter for resource management and pacing. Sometimes players want to break things up with more of a gritty or survivalist style. This means adding gameplay elements that focus on attrition, strategic resource management, mitigation, and lean into the fragile nature of health. In other words, it extends gameplay into longer term campaign elements, rather than containing it to individual encounters. As a result of Matt Colville's recent twitch hangout, I was inspired to write down my own thoughts on gritty rules for 5e.
