--- a/content/posts/2021-06-30-gritty-healing-part-2-spells.mdx
+++ b/content/posts/2021-06-30-gritty-healing-part-2-spells.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "gritty-healing-part-2-spells"
-title: "Gritty Healing in 5e Part 2: Spells"
-date: "2021-06-30"
-excerpt: "Part 2 of my Gritty Healing and Survival Rules for 5e address mechanics for spells and potions."
-featured_image: "/images/silverstars_by_anthonyfoti-wotc_475x594.jpg"
+slug: gritty-healing-part-2-spells
+title: 'Gritty Healing in 5e Part 2: Spells'
+date: '2021-06-30'
+excerpt: >-
+  Tie magical healing to the recipient’s Hit Dice to cap recovery, keep injuries
+  meaningful, and free healers from heal-bot duty in gritty 5e.
+featured_image: /images/silverstars_by_anthonyfoti-wotc_475x594.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 Earlier in the week I posted some rules for [Gritty Healing & Survival in 5e](/2021/06/27/gritty-healing-and-survival-rules/). These work for group looking for that kind of long-term resource management and play. However, it leaves a bit of a gap when it comes to healing spells and magic.  In fact, most gritty mechanics suffer from the problem of setting up a system for persistent injuries, then introduce magic that lets you skip past it. Also, it suffers from the problem of turning the cleric into the heal-bot for a party, making sit out of the action during encounters to heal everyone later. So having some way to align the leaning mechanic with the core idea of recovery as a central design principle is important. Without it, you end up with the same effect as healing overnight but force the healing PC to burn all their resources and sit most encounters out.
