--- a/content/posts/2021-07-13-perilous-journeys-in-5e-p1.mdx
+++ b/content/posts/2021-07-13-perilous-journeys-in-5e-p1.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "perilous-journeys-in-5e-p1"
-title: "Perilous Journeys in 5e Part 1"
-date: "2021-07-13"
-excerpt: "A set of 5e house rules that make journeys fun by limiting long rests on the road and providing some rules for camps."
-featured_image: "/images/alex-wilton-journey_to_emmons_field_475x616.jpg"
+slug: perilous-journeys-in-5e-p1
+title: Perilous Journeys in 5e Part 1
+date: '2021-07-13'
+excerpt: >-
+  This post offers simple travel rules for 5e: havens-only long rests, base
+  camps, improved sleep and meals, and terrain-based pacing to enliven
+  exploration.
+featured_image: /images/alex-wilton-journey_to_emmons_field_475x616.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 Perilous journeys are a mainstay of fantasy literature and adventure, yet 5e provides little game play in the way of travel and discovery.  This is primarily because the system focuses on encounters per day, which limits long form narrative game elements.  First, the long rest reset means encounters or delays seem little more than annoying distractions. Second, characters have little in the way of meaningful game play to engage them in travel. or interact with one another. These rules present a few simple modifications to add some game play spice back into your journeys to help make the exploration pillar exciting again.
