--- a/content/posts/2021-12-08-tavern-games-darts-minigame.mdx
+++ b/content/posts/2021-12-08-tavern-games-darts-minigame.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "tavern-games-darts-minigame"
-title: "Tavern Games - Darts for your D&D Game"
-date: "2021-12-08"
-excerpt: "A mini-game to simulate darts for your TTRPG play group."
-featured_image: "/images/Gaston-Dart-Board_600x400.jpg"
+slug: tavern-games-darts-minigame
+title: Tavern Games - Darts for your D&D Game
+date: '2021-12-08'
+excerpt: >-
+  Add a tavern darts mini-game to your D&D sessions using two d20s for segment
+  and ring, with ranged attack bonus to tweak rolls and score doubles and bulls.
+featured_image: /images/Gaston-Dart-Board_600x400.jpg
 draft: false
 showToc: false
+tags:
+  - House Rules
+  - Mechanics
+  - RPG Resources
+  - DM Advice
 ---
 
 Mini-games can be fun distraction for your players in any TTRPG campaign. Downtime or social sessions can create a lot of opportunities for this in your game. With the release of [The Wild Beyond the Witchlight](https://dnd.wizards.com/products/wild-beyond-witchlight) adventure, players have asking about mini-games to use.  So I thought I'd share the rules for my simple mini-game for Darts.
