--- a/content/posts/2023-05-04-return-of-the-write-spell-in-dnd.mdx
+++ b/content/posts/2023-05-04-return-of-the-write-spell-in-dnd.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "return-of-the-write-spell-in-dnd"
-title: "The Return of the Write Spell -  A Nostalgic Callback or Unnecessary Complexity?"
-date: "2023-05-04"
-excerpt: "This blog post explores the reintroduction of the Write spell in the D&D 5th edition playtest material, discussing its origins, potential purpose, and whether it adds meaningful depth or unnecessary complexity to the game."
-featured_image: "/images/young_adult_wizard_scribing.jpg"
+slug: return-of-the-write-spell-in-dnd
+title: >-
+  The Return of the Write Spell -  A Nostalgic Callback or Unnecessary
+  Complexity?
+date: '2023-05-04'
+excerpt: >-
+  Playtest adds Scribe Spell to handle wizard scribing, a throwback to Write,
+  but the author argues it adds fiddly complexity without real payoff.
+featured_image: /images/young_adult_wizard_scribing.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
 ---
 
 As fans of Dungeons and Dragons 5th edition, we're always excited to see what new [playtest material](https://www.dndbeyond.com/sources/one-dnd/ph-playtest-5) the developers come up with. Recently, there's been a proposed change to how wizards scribe spells into their spellbooks that has stirred up some debate in the D&D community. The change involves introducing a spell called "Scribe Spell" to handle the scribing process, a concept that harkens back to an earlier spell called "Write" from the first edition of Advanced Dungeons and Dragons. In this blog post, we'll dive into the history of these spells, their potential purpose in the 5th edition, and whether they add value or just unnecessary complexity to the game.
