--- a/content/posts/2023-05-13-revised-injury-condition.mdx
+++ b/content/posts/2023-05-13-revised-injury-condition.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "revised-injury-condition"
-title: "Revised Injured Condition"
-date: "2023-05-13"
-excerpt: "A simple and quick lasting injuries system for DnD based on the Exhausted playtest."
-featured_image: "/images/treating-injuries480x480.jpg"
+slug: revised-injury-condition
+title: Revised Injured Condition
+date: '2023-05-13'
+excerpt: >-
+  Add lasting injuries to DnD 5e for higher stakes and strategy, with levels
+  affecting rolls, recovery checks, class perks, and magic-based healing.
+featured_image: /images/treating-injuries480x480.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
 ---
 
 Introducing a lasting injury system in Dungeons and Dragons 5th edition can greatly enhance the depth and realism of your adventures. Combat, a cornerstone of the game, gains significant weight as each encounter carries potential long-term consequences. This system not only makes every decision in battle consequential but also turns health into a crucial resource that demands thoughtful management, adding a layer of strategic complexity.
