--- a/content/posts/2023-05-13-the-world-of-etherea.mdx
+++ b/content/posts/2023-05-13-the-world-of-etherea.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "the-world-of-etherea"
-title: "Introduction to the World of Etherea"
-date: "2023-05-13"
-excerpt: "An introduction my homebrew setting of Etherea, for use with the Shadowdark RPG."
-featured_image: "/images/etherea-setting-lineart.jpg"
+slug: the-world-of-etherea
+title: Introduction to the World of Etherea
+date: '2023-05-13'
+excerpt: >-
+  After the Echofall shattered Etherea, emotions spawn Echoforms from the
+  Umbraweave as Weavers and the faithful vie amid perilous ruins and volatile
+  magic.
+featured_image: /images/etherea-setting-lineart.jpg
 draft: false
 showToc: false
+tags:
+  - Shadowdark
+  - Lore
+  - RPG Resources
 ---
 
 Etherea is the initial idea for a setting I've crafted for the [Shadowdark](https://www.thearcanelibrary.com/pages/shadowdark) Tabletop Roleplaying game, designed to foster a sense of intrigue and danger inherent in the exploration of magic and the supernatural. The core concept of the world, the Umbraweave, is meant to evoke a persistent sense of mystery and unease, underlining the idea that behind the veil of reality, potent emotions and intense events birth spirits that drift in the shadows. The aim is to instill a constant sense of tension and wonder in the players, offering them a world where magic is as unpredictable and dangerous as it is powerful.
