--- a/content/posts/2023-05-14-design-goals-of-etherea.mdx
+++ b/content/posts/2023-05-14-design-goals-of-etherea.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "design-goals-of-etherea"
-title: "Design Goals of Etherea"
-date: "2023-05-14"
-excerpt: "An introduction my homebrew setting of Etherea, for use with the Shadowdark RPG."
-featured_image: "/images/design-of-etherea.jpg"
+slug: design-goals-of-etherea
+title: Design Goals of Etherea
+date: '2023-05-14'
+excerpt: >-
+  Outlines a Shadowdark homebrew where belief shapes reality, with lore-driven
+  monsters, risky magic, and evolving hooks for adventures and towns.
+featured_image: /images/design-of-etherea.jpg
 draft: false
 showToc: false
+tags:
+  - Shadowdark
+  - Lore
+  - Monsters
+  - Mechanics
 ---
 
 Yesterday, I posted some initial lore for [Etherea](/2023/05/13/the-world-of-etherea/) (Ah-Ther-ee-ah), a homebrew world am interested in developing for a setting I'm creating for a new [Shadowdark](https://www.thearcanelibrary.com/pages/shadowdark) game. This is a personal endeavor, not intended for publication (other than on my blog here). I'm captivated by the idea of things manifesting in the world based on emotions, beliefs, etc., and the resulting chaos of magic surrounding it. The concept is akin to the Umbra from Werewolf: The Forsaken, Spren in the Stormlight Archives, or entities like the creature in the Babadook that manifests from fear or unfulfilled wishes.
