--- a/content/posts/2023-05-15-origins-of-the-astral-and-etherial-planes-in-dnd.mdx
+++ b/content/posts/2023-05-15-origins-of-the-astral-and-etherial-planes-in-dnd.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "origins-of-the-astral-and-etherial-planes-in-dnd"
-title: "Origins of the Astral and Ethereal Planes in D&D"
-date: "2023-05-15"
-excerpt: "A history of the origins of the astral and ethereal plans in DnD and why they exist."
-featured_image: "/images/transativeplanes.jpg"
+slug: origins-of-the-astral-and-etherial-planes-in-dnd
+title: Origins of the Astral and Ethereal Planes in D&D
+date: '2023-05-15'
+excerpt: >-
+  Explores how counterculture, pop icons, and early design split ghosts and
+  psionics into two transitive realms, and how 5e streamlines that legacy.
+featured_image: /images/transativeplanes.jpg
 draft: false
 showToc: false
+tags:
+  - Lore
+  - Analysis
+  - DnD 5e
 ---
 
 Recently, [DMDavid](https://twitter.com/dmdavidblog/status/1658104726297165830) posed a fascinating question on Twitter about the origins of the [Astral and Ethereal Planes](https://www.dndbeyond.com/sources/basic-rules/appendix-d-the-planes-of-existence#TransitivePlanes) in the early editions of Dungeons and Dragons (DnD). As a devoted Tabletop Roleplaying Game enthusiast, I'd like to delve into this intriguing query and shed some light on the cultural and historical influences that shaped these iconic facets of the game.
