--- a/content/posts/2023-05-17-the-benefits-of-xp-in-5th-edition.mdx
+++ b/content/posts/2023-05-17-the-benefits-of-xp-in-5th-edition.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "the-benefits-of-xp-in-5th-edition"
-title: "Experience Matters - The benefits of XP in 5th edition"
-date: "2023-05-17"
-excerpt: "Advocating for XP in D&D 5e. this post discusses its role in boosting engagement, diversifying actions, and improving game immersion."
-featured_image: "/images/PlayerWithDiceAndPaper.jpg"
+slug: the-benefits-of-xp-in-5th-edition
+title: Experience Matters - The benefits of XP in 5th edition
+date: '2023-05-17'
+excerpt: >-
+  Advocates experience points over milestones, tying growth to player actions,
+  pacing adventures, rewarding exploration and roleplay, and preserving
+  memories.
+featured_image: /images/PlayerWithDiceAndPaper.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - Philosophy
 ---
 
 In the diverse world of Tabletop Role-Playing Games (TTRPGs), the progression system you choose can significantly influence the way your campaign unfolds. In 5th edition Dungeons & Dragons (D&D), two popular methods of character progression exist: Experience Points (XP) and Milestone Advancement. While Milestone Advancement has its merits, I am here to make a case for XP, an often overlooked, but immensely beneficial system.
