--- a/content/posts/2023-05-19-vathirond-city-of-wild-inspiration.mdx
+++ b/content/posts/2023-05-19-vathirond-city-of-wild-inspiration.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "vathirond-city-of-wild-inspiration"
-title: "Vathirond City of Wild Inspiration"
-date: "2023-05-19"
-excerpt: "Lore for the City of Vathirond in the Eberron setting."
-featured_image: "/images/VathirondInspiration4.png"
+slug: vathirond-city-of-wild-inspiration
+title: Vathirond City of Wild Inspiration
+date: '2023-05-19'
+excerpt: >-
+  On Eberron's Mournland edge, a shattered Brelish city of six Crowns, clashing
+  factions, and refugee Gutters offers rich lore and adventure hooks.
+featured_image: /images/VathirondInspiration4.png
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - RPG Resources
+  - Lore
+  - DM Advice
 ---
 
 As a Dungeon Master, there's nothing quite as enticing as the prospect of molding a lesser-known city into a stage for unforgettable adventures. In 2019, I found myself drawn to the city of Vathirond, tucked away in far eastern Breeland, on the fringes of Eberron's haunting Mournlands. With the Brey River's southern bank underfoot and the specter of the Gray Mist as a backdrop, Vathirond was an irresistible canvas for my homebrew campaign. Yet, as fate would have it, our journey through this enigmatic city was cut short due to the COVID pandemic. Now, after a couple of years, I've dusted off my notes and decided to share them with the world. Whether you're a seasoned Dungeon Master or a curious reader, I hope you find these glimpses into Vathirond - the city on the edge of the Mournlands - as fascinating as I did while crafting them.
