--- a/content/posts/2023-05-27-improved-mark-option.mdx
+++ b/content/posts/2023-05-27-improved-mark-option.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "improved-mark-option"
-title: "Reimagining the Mark Option in D&D 5E - Empowering Martial Characters"
-date: "2023-05-27"
-excerpt: "Explore a proposed revision to D&D 5Es Mark option to boost martial gameplay, simplifying rules and enriching combat dynamics."
-featured_image: "/images/OpportunityAttack_480x720.jpg"
+slug: improved-mark-option
+title: Reimagining the Mark Option in D&D 5E - Empowering Martial Characters
+date: '2023-05-27'
+excerpt: >-
+  Proposes a streamlined Mark rule: if you hit a foe in melee since your last
+  turn, you can make one opportunity attack each round without using your
+  reaction.
+featured_image: /images/OpportunityAttack_480x720.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
 ---
 
 Dungeons and Dragons 5th Edition's Dungeon Master’s Guide (DMG) presents an array of optional rules that, regrettably, often recede into obscurity. One such overlooked provision, nestled within Chapter 9 of the DMG, is the "Mark" option. This rule, seemingly promising on the surface, is burdened with unnecessary complexities, offering marginal benefit.
