--- a/content/posts/2023-05-31-places-of-power.mdx
+++ b/content/posts/2023-05-31-places-of-power.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "places-of-power"
-title: "You Have the Power - Places of Power in D&D"
-date: "2023-05-31"
-excerpt: "Dive into D&Ds magic with our guide on Places of Power. Explore how to find, attune, and harness these unique locations to enhance your game."
-featured_image: "/images/PlaceOfPower._480x720.jpg"
+slug: places-of-power
+title: You Have the Power - Places of Power in D&D
+date: '2023-05-31'
+excerpt: >-
+  High-risk magical sites let casters supercharge spells via attunement and
+  metamagic checks with failure risks and rarity tiers, giving DMs rich hooks.
+featured_image: /images/PlaceOfPower._480x720.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 The untamed forces of magic in Dungeons and Dragons have long held the power to both awe and terrify, a duality echoed in the narrative threads of fantasy literature. This house rule invites players to embrace this paradox, offering a high-stakes opportunity to amplify their spells beyond conventional limits. But, this isn't a risk to be taken lightly; mastery comes with potential for both magnificent success and cataclysmic failure. This high-risk, high-reward dynamic is not universal, but rather tethered to Places of Power - locations within the game world steeped in raw, wild magical energy. Here, spellcasters can attempt to weave this abundant power into their own spells, pushing the boundaries of what they could usually achieve. However, the road to arcane supremacy is fraught with peril, and the volatile energies of these places can lead to unexpected and dangerous consequences.
