--- a/content/posts/2023-06-02-what-are-hit-points-in-dnd.mdx
+++ b/content/posts/2023-06-02-what-are-hit-points-in-dnd.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "what-are-hit-points-in-dnd"
-title: "Decoding D&D - What the heck are Hit Points Anyway?"
-date: "2023-06-02"
-excerpt: "This post unravels the history of D&Ds Hit Points (HP), from wargaming roots to 5th Eds abstract system. And it looks into what the heck hit points are supposed to be anyway."
-featured_image: "/images/mandy-jurgens-female-plate_475x672.jpg"
+slug: what-are-hit-points-in-dnd
+title: Decoding D&D - What the heck are Hit Points Anyway?
+date: '2023-06-02'
+excerpt: >-
+  HP in D&D are an abstract tool shaped by the DM to set tone and stakes, not
+  literal wounds, evolving across editions to serve fun.
+featured_image: /images/mandy-jurgens-female-plate_475x672.jpg
 draft: false
 showToc: false
+tags:
+  - Mechanics
+  - DM Advice
+  - Philosophy
+  - Analysis
 ---
 
 The conversation around what Hit Points (HP) are and what they represent in Dungeons & Dragons (D&D) is a cyclical one. It's a concept that periodically bubbles up in the tabletop role-playing game (TTRPG) community, like an ancient dragon in its cyclical slumber, and we seem to be in the midst of another awakening.
