--- a/content/posts/2023-06-10-campaign-pitch-decks.mdx
+++ b/content/posts/2023-06-10-campaign-pitch-decks.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "campaign-pitch-decks"
-title: "Pitch Perfect - Using a Pitch Deck for Your D&D Campaign"
-date: "2023-06-10"
-excerpt: "Pitch your D&D campaign like a start-up. Use a pitch deck to attract the right players, align expectations and kickstart a successful game."
-featured_image: "/images/CharactersCelebratingAtTable_480x480.png"
+slug: campaign-pitch-decks
+title: Pitch Perfect - Using a Pitch Deck for Your D&D Campaign
+date: '2023-06-10'
+excerpt: >-
+  Use a concise pitch deck to attract the right players by outlining premise,
+  tone, rules, schedule, and boundaries, plus tools and templates to get
+  started.
+featured_image: /images/CharactersCelebratingAtTable_480x480.png
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - House Rules
 ---
 
 Launching a new Dungeons & Dragons campaign is no small feat. It requires not only the arduous task of finding players, but also identifying those who are the perfect fit for your envisioned adventure. Even before delving into character backgrounds, safety tools, or other vital session zero elements, a Dungeon Master's first hurdle is convincing potential players to invest their precious time and energy into the unfolding saga. This initial step bears striking similarity to pitching a fresh product or service. Just as entrepreneurs entice investors with the promise of innovation and value, DMs need to captivate potential players with a compelling campaign concept. Enter the Pitch Deck - a tool commonly used in the business world, but equally potent in setting the stage for a thrilling D&D campaign.
