--- a/content/posts/2023-06-19-revisiting-death-saves-in-5e.mdx
+++ b/content/posts/2023-06-19-revisiting-death-saves-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "revisiting-death-saves-in-5e"
-title: "Gritty Survival in 5e - Breathing life into Death Saves"
-date: "2023-06-19"
-excerpt: "Explore the peculiarities of DnDs 5e Death Save system and discover a riveting house rule that adds urgency and deepens gameplay interaction"
-featured_image: "/images/wounded_character_480x720.jpg"
+slug: revisiting-death-saves-in-5e
+title: Gritty Survival in 5e - Breathing life into Death Saves
+date: '2023-06-19'
+excerpt: >-
+  A proposed 5e house rule ties risk to negative HP and CON saves, raising
+  urgency, nerfing Healing Word, and making knockdowns matter again.
+featured_image: /images/wounded_character_480x720.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 Ever found yourself scratching your head over the peculiarities of the Death Save system in Dungeons and Dragons (DnD) 5e? In particular, how the system seems disconnected from the gameplay and action. It can seem counter-intuitive when zero hit points result in the same outcome for any character, regardless of how they arrived there. The Death Save min-game is the same, whether you've taken a single point of damage, or sustained a catastrophic 150-foot fall. In this post, I aim to dissect the effects of this system on the game and propose a house rule that could shake things up to make the prospect of death an exciting part of the action again.
