--- a/content/posts/2023-06-28-arcane-servant-spells.mdx
+++ b/content/posts/2023-06-28-arcane-servant-spells.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "arcane-servant-spells"
-title: "Summon the Unusual - 3 New  Spells for DnD 5e"
-date: "2023-06-28"
-excerpt: "Explore new servant summoning spells for DnD 5e! This post introduces three innovative spells, adding depth and fun to your arcane gameplay."
-featured_image: "/images/young_adult_wizard_scribing.jpg"
+slug: arcane-servant-spells
+title: Summon the Unusual - 3 New  Spells for DnD 5e
+date: '2023-06-28'
+excerpt: >-
+  Homebrew options for arcane pet play: animate weapons, clockwork constructs,
+  and mephits, with balance notes, scaling, and narrative discovery hooks.
+featured_image: /images/young_adult_wizard_scribing.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - DM Advice
+  - Mechanics
 ---
 
 As a fan of magically animated minions, I've always felt somewhat limited by the options available in the 5th edition of Dungeons and Dragons. If you're intrigued by the idea of a "pet" class in D&D, your primary option is to become a Necromancer and use Animate Dead. However, the image of a group of shambling undead isn't always what players envision. Given the rich narrative tradition of casters animating objects, constructs, or elements, it's perplexing that these options aren't more prevalent in the game.
