--- a/content/posts/2023-07-23-painting-geography-with-narrative.mdx
+++ b/content/posts/2023-07-23-painting-geography-with-narrative.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "painting-geography-with-narrative"
-title: "Narrative Landscapes - More Engaging TTRPG Travel"
-date: "2023-07-23"
-excerpt: "Enhance your TTRPGs with immersive, narrative-driven travel. Transform landscapes from mere backdrops to catalysts for adventure and player engagement."
-featured_image: "/images/narrative-terrain_480x679.png"
+slug: painting-geography-with-narrative
+title: Narrative Landscapes - More Engaging TTRPG Travel
+date: '2023-07-23'
+excerpt: >-
+  Transform travel by treating geography as a character, embedding hooks and
+  implied encounters that spark curiosity and player-driven choices.
+featured_image: /images/narrative-terrain_480x679.png
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Encounters
+  - Philosophy
 ---
 
 The art of travel in Tabletop Roleplaying Games remains a perennial favorite in community discussions. Despite my earlier posts on constructing [Perilous Journeys in D&D 5e](/2021/07/13/perilous-journeys-in-5e-p1/), the conversation must go beyond mere obstacles and challenges. The true crux lies in the marriage of narrative and geography - a fusion that is underscored yet often lacks actionable guidance. So, how can we elevate the routine task of terrain description into a thrilling spark for player immersion? Let's dive in.
