--- a/content/posts/2023-11-04-dungeon-of-the-grieving-mind.mdx
+++ b/content/posts/2023-11-04-dungeon-of-the-grieving-mind.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "dungeon-of-the-grieving-mind"
-title: "Dungeon of the Grieving Mind - Not Your Typical Dungeon!"
-date: "2023-11-04"
-excerpt: "Explore a dynamic Dungeons and Dragons dungeon inspired by player choices, where a warlock seeks retribution for their fallen kin."
-featured_image: "/images/dungon-entrance_480x600.png"
+slug: dungeon-of-the-grieving-mind
+title: Dungeon of the Grieving Mind - Not Your Typical Dungeon!
+date: '2023-11-04'
+excerpt: >-
+  A level-5 DnD 5e grief-themed dungeon born from slain innocents, mixing
+  environmental hazards and moral trials across five evocative chambers.
+featured_image: /images/dungon-entrance_480x600.png
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Encounters
+  - DM Advice
+  - RPG Resources
 ---
 
 Crafting dungeons that deeply resonate with the consequences of character choices? Now, that's what I call top-notch Dungeon Mastering in Dungeons and Dragons. Inspired by a spirited discussion over on Reddit, I've crafted the dungeon you're about to delve into. My hope? That you'll find it a thrilling addition to your campaign. The premise is versatile enough to slide right into numerous D&D storylines, whenever innocents have perished in the course of an adventure. An all too common occurrence in most campaigns.
