--- a/content/posts/2023-11-09-the-advantage-of-knowing-modifiers.mdx
+++ b/content/posts/2023-11-09-the-advantage-of-knowing-modifiers.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "the-advantage-of-knowing-modifiers"
-title: "The Statistical Mirage of Advantage in D&D 5th Edition"
-date: "2023-11-09"
-excerpt: "A breakdown the often missunderstood Advantage mechanic in Dunegeons & Dragons."
-featured_image: "/images/PlayerWithDiceAndPaper.jpg"
+slug: the-advantage-of-knowing-modifiers
+title: The Statistical Mirage of Advantage in D&D 5th Edition
+date: '2023-11-09'
+excerpt: >-
+  Advantage skews outcomes toward the mean, boosts easy checks more than hard
+  ones, and its non-stacking design blunts creative tactics and tension.
+featured_image: /images/PlayerWithDiceAndPaper.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Mechanics
+  - Analysis
+  - DM Advice
 ---
 
 Adventurers, gather 'round the table as we delve into the often misunderstood mechanics of Advantage in Dungeons & Dragons 5th Edition. Introduced as a streamlined method of bonus handling, Advantage allows players to roll a second d20 and choose the higher of the two. On the surface, it seems like a boon to the dice-rolling hopefuls, offering a second arrow in the quiver of chance. But does it truly elevate the players' prospects, or is it a statistical sleight of hand?
