--- a/content/posts/2023-11-27-dming-isnt-a-conspiracy-to-control-you.mdx
+++ b/content/posts/2023-11-27-dming-isnt-a-conspiracy-to-control-you.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "dming-isnt-a-conspiracy-to-control-you"
-title: "DMing is not a Covert Power Grab"
-date: "2023-11-27"
-excerpt: "Explore how the DMs role as the First Mover shapes DnD games, impacts player dynamics, and evolves with changing rules and online culture."
-featured_image: "/images/A_group_playing_a_TTRPG_togeher_480x581.png"
+slug: dming-isnt-a-conspiracy-to-control-you
+title: DMing is not a Covert Power Grab
+date: '2023-11-27'
+excerpt: >-
+  The DM initiates and shapes play; collaboration matters, but new norms that
+  cast their creative lead as suspect risk stifling games.
+featured_image: /images/A_group_playing_a_TTRPG_togeher_480x581.png
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - Community
+  - Philosophy
+  - DnD 5e
 ---
 
 The DM is the First Mover in any Dungeons & Dragons campaign. It's not that they're superior or more important; rather, the game hinges on the DM's involvement. As the game's primary driving force, DMs significantly influence its tone and genre. Moreover, since they orchestrate the world, it naturally reflects their point of view and judgment. This aspect of game-running is a feature, not a flaw. While it's perfectly valid for players to have preferences about the game's style, the DM's creative perspective is not inherently wrong.
