--- a/content/posts/2023-12-11-guidelines-for-great-ttrpg-design.mdx
+++ b/content/posts/2023-12-11-guidelines-for-great-ttrpg-design.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "guidelines-for-great-ttrpg-design"
-title: "Unlocking the Magic of TTRPG Design"
-date: "2023-12-11"
-excerpt: "Explore how Brandon Sandersons magic system principles can revolutionize TTRPG design for deeper, more engaging gameplay experiences."
-featured_image: "/images/dice_and_eberron_480x640.jpg"
+slug: guidelines-for-great-ttrpg-design
+title: Unlocking the Magic of TTRPG Design
+date: '2023-12-11'
+excerpt: >-
+  Applying Sanderson’s principles to tabletop RPGs, this argues for limits,
+  costs, and risk over power creep, using subsystem interplay to enrich play.
+featured_image: /images/dice_and_eberron_480x640.jpg
 draft: false
 showToc: false
+tags:
+  - Philosophy
+  - Analysis
+  - Mechanics
+  - Community
 ---
 
 Brandon Sanderson, celebrated for his exceptional worldbuilding and intricate [magic system design](https://faq.brandonsanderson.com/knowledge-base/what-are-sandersons-laws-of-magic/), stands out as a titan in modern fantasy literature. His principles, while crafted for literary creation, offer invaluable insights for TTRPG design. In an era brimming with new TTRPG systems being developed and crowdfunded, I frequently ponder how Sanderson's concepts could shape better game design, or at least preserve a diversity in gaming experiences rather than  yet another play on heroic-fantasy without risk of failure. Specifically, I contemplate the potential of these foundational ideas to captivate players through effective game design—a crucial aspect often missed in the foundational design of many emerging games.
