--- a/content/posts/2024-02-16-revised-exhausted-condition.mdx
+++ b/content/posts/2024-02-16-revised-exhausted-condition.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "revised-exhausted-condition"
-title: "Gritty DnD Injuries - Expanding Exhaustion"
-date: "2024-02-16"
-excerpt: "Explore gritty DnD 5e injuries, adding strategic depth and encouraging camaraderie without spiraling into defeat."
-featured_image: "/images/wounded_ranger_480x600.png"
+slug: revised-exhausted-condition
+title: Gritty DnD Injuries - Expanding Exhaustion
+date: '2024-02-16'
+excerpt: >-
+  Revamps exhaustion in 5e with -1 per level, gains on crits and death saves,
+  class Shake It Off, and clearer recovery, adding tension, stakes, and
+  teamwork.
+featured_image: /images/wounded_ranger_480x600.png
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 In Dungeons and Dragons 5th edition, the introduction of lasting injuries and effects promises to revitalize the way players approach the game. By infusing combat with the possibility of enduring consequences, this elevates the significance of each skirmish beyond the individual encounter. Health is no longer just hit points to be replenished with the wave of a hand or a nap; it becomes a strategic element of play managed through clever player choices. This shift introduces a layer of tactical depth missing in the vanilla game, requiring players to think critically about their characters actions and their potential long-term impacts on how the adventure plays out.
