--- a/content/posts/2024-04-28-ttrpg-tools-for-collaboration.mdx
+++ b/content/posts/2024-04-28-ttrpg-tools-for-collaboration.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "ttrpg-tools-for-collaboration"
-title: "TTRPG Tools for Collboration and Change"
-date: "2024-04-28"
-excerpt: "Discover collaborative tools for aligning expectations and enhancing fun in your TTRPG and DnD games. Improve cooperation and enjoyment at your table."
-featured_image: "/images/ToolsforCollaborationChangeTTRPGs_960x540.png"
+slug: ttrpg-tools-for-collaboration
+title: TTRPG Tools for Collboration and Change
+date: '2024-04-28'
+excerpt: >-
+  Build better tables by aligning assumptions about the world and preferred play
+  styles, then using communication, examples, and incentives to support shared
+  fun.
+featured_image: /images/ToolsforCollaborationChangeTTRPGs_960x540.png
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - Philosophy
+  - Community
+  - RPG Resources
 ---
 
 Why do some Dungeons & Dragons groups struggle so hard to cooperate and enjoy a game together? Even well-meaning players can have spotty outcomes and TTRPG groups can have a hard time staying together for more than a few sessions. Particularly in an era of safety tools, and assertions of the importance of inclusive play, we seem to be struggling harder now than any other time in the hobby. Many take the position that this is because we are clearing the toxicity of one culture or another from the gaming space, but I would suggest this is wrong-minded. As a community, too many people have given up on the idea that collaboration or real tolerance of different opinions has any value at all. Some may blame an inherent cultural evil for this division but I am not convinced. I suggest the TTRPG community doesn't have a good set of frameworks or tools to promote collaboration. Yes we have safety tools and, while those can be useful, safety and collaboration are completely different things.
