--- a/content/posts/2024-05-02-experience-matters-updated.mdx
+++ b/content/posts/2024-05-02-experience-matters-updated.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "experience-matters-updated"
-title: "Experience Still Matters - The Benefits of using XP in 5e."
-date: "2024-05-02"
-excerpt: "Uncover the benefits of XP-based advancement in D&D. Enhance player agency, pacing, and diverse gameplay. Learn to award XP for a well-rounded experience."
-featured_image: "/images/An_anxious_Dungeon_Master_480x480.jpg"
+slug: experience-matters-updated
+title: Experience Still Matters - The Benefits of using XP in 5e.
+date: '2024-05-02'
+excerpt: >-
+  Argues for XP-based advancement in D&D, rewarding non-combat play, encouraging
+  agency, easing pacing, and doubling as a memory log for your campaign.
+featured_image: /images/An_anxious_Dungeon_Master_480x480.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - Philosophy
 ---
 
 As we eagerly await the release of the updated version of revised 5th Edition Dungeons & Dragons in 2024, it's an opportune time to re-examine some of the core systems that make our beloved TTRPG tick. One such system that often sparks debate among players and Dungeon Masters alike is the method of character advancement. In light of the recent surge in views on my previous articles discussing the benefits of using experience points (XP) in D&D, I thought it would be valuable to delve deeper into this topic and explore how XP-based advancement can enhance your gaming experience.
