--- a/content/posts/2024-07-16-twelve-rules-for-players-to-live-by.mdx
+++ b/content/posts/2024-07-16-twelve-rules-for-players-to-live-by.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "twelve-rules-for-players-to-live-by"
-title: "12 Rules for TTRPG Players to Live By"
-date: "2024-07-16"
-excerpt: "Discover my 12 rules for TTRPG players to enhance their gaming experience. Learn how to be a better player and create more enjoyable sessions for everyone at the table."
-featured_image: "/images/A_group_playing_a_TTRPG_togeher_480x581.png"
+slug: twelve-rules-for-players-to-live-by
+title: 12 Rules for TTRPG Players to Live By
+date: '2024-07-16'
+excerpt: >-
+  Practical, playful principles to be a better TTRPG player: show up, engage,
+  share spotlight, pursue story beats, state intentions, respect others' fun.
+featured_image: /images/A_group_playing_a_TTRPG_togeher_480x581.png
 draft: false
 showToc: false
+tags:
+  - RPG Resources
+  - Community
+  - Philosophy
 ---
 
 A few weeks ago, a great thread was [floating around on X](https://x.com/jangowolf/status/1805978656533057793) (*formerly known as Twitter and largely still called that but... oh, nevermind*) lamenting the lack of meaningful Player Guides on TTRPG blogs. We have a plethora of guides on how to be a great Game Master but few on how to be a great player. Okay, that's not entirely true - there are plenty of YouTube videos by [DungeonCraft](https://www.youtube.com/watch?v=SiywNrOABbQ) or [Seth Skorkowsky](https://www.youtube.com/watch?v=UiCxyBi8lRk&list=PL25p5gPY6qKVWbFtR-Crct97hg5DFekZQ&index=8) offering great player advice, and a few blog posts on the topic, but they're drowned out by the volume of DM advice content.
