--- a/content/posts/2024-08-26-expanded-herb-list-for-shadowdark.mdx
+++ b/content/posts/2024-08-26-expanded-herb-list-for-shadowdark.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "expanded-herb-list-for-shadowdark"
-title: "Foraging for Herbs in Shadowdark"
-date: "2024-08-26"
-excerpt: "An expanded guide to herb foraging rules for the Shadowdark TTRPG, with additional gameplay tips and customization options."
-featured_image: "/images/herbalist_bench_480x240.png"
+slug: expanded-herb-list-for-shadowdark
+title: Foraging for Herbs in Shadowdark
+date: '2024-08-26'
+excerpt: >-
+  OSR-inspired herbalism rules add strategic foraging, preservation checks, an
+  expanded herb list, Ranger balance notes, and GM tips to your Shadowdark
+  games.
+featured_image: /images/herbalist_bench_480x240.png
 draft: false
 showToc: false
+tags:
+  - Shadowdark
+  - Mechanics
+  - House Rules
+  - DM Advice
 ---
 
 Foraging for herbs has long been a cherished aspect of the Old-School Renaissance (OSR) gaming experience, offering players the chance to interact with their environment in meaningful ways. In the spirit of this tradition, these Herb Foraging rules for [Shadowdark](https://www.thearcanelibrary.com/pages/shadowdark) aim to add an option for strategic play and enhance the immersive nature of your campaigns.
