--- a/content/posts/2024-08-28-rolepalying-origins-of-dnd.mdx
+++ b/content/posts/2024-08-28-rolepalying-origins-of-dnd.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rolepalying-origins-of-dnd"
-title: "The Roleplaying Origins of Early Dungeons and Dragons"
-date: "2024-08-28"
-excerpt: "Uncover how early D&D modules emphasized roleplaying, diplomacy, and problem-solving, shaping the evolution of the game from its wargaming roots."
-featured_image: "/images/keep-on-the-borderlands_480x621.jpg"
+slug: rolepalying-origins-of-dnd
+title: The Roleplaying Origins of Early Dungeons and Dragons
+date: '2024-08-28'
+excerpt: >-
+  Classic modules show early editions centered on negotiation and player
+  ingenuity, contrasting with later skill-driven, performative approaches.
+featured_image: /images/keep-on-the-borderlands_480x621.jpg
 draft: false
 showToc: false
+tags:
+  - Analysis
+  - Philosophy
+  - Mechanics
+  - Shadowdark
 ---
 
 There’s a common misconception floating around that narrative roleplaying in tabletop games is a relatively modern invention, something that only came into focus with the later editions of [Dungeons & Dragons](https://www.dndbeyond.com/) and other game systems like [Blades in the Dark](https://evilhat.com/product/blades-in-the-dark/). This belief, while understandable, couldn’t be further from the truth. From its earliest days, DnD was designed with roleplaying at its core—a distinction that set it apart from the wargames that preceded it. Sure, early DnD had its share of combat (often brutal and unforgiving), but if you think it was all about kicking down doors and hacking away at monsters, you’ve missed the point, and probably rolled a lot of new characters. The truth is, combat was risky, and survival often depended on players being more thoughtful, more cunning. Roleplaying wasn’t an option; it was a necessity, at least in the way early DnD framed it but more on that later. *Many of the early modules assumed players would be talking, negotiating, and thinking their way out of danger as often than they’d be fighting.*
