--- a/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
+++ b/content/posts/2024-09-04-mounted-combat-in-shadowdark.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "mounted-combat-in-shadowdark"
-title: "Mounted Combat in Shadowdark TTRPG"
-date: "2024-09-04"
-excerpt: "Enhance your Shadowdark RPG adventures with new mounted combat rules. Learn about different mounts, gear, and tactics for thrilling horseback battles and travel."
-featured_image: "/images/KnightsCharging.webp"
+slug: mounted-combat-in-shadowdark
+title: Mounted Combat in Shadowdark TTRPG
+date: '2024-09-04'
+excerpt: >-
+  Streamlined Shadowdark mount rules: melee bonus, charging with polearms, risks
+  of bolting, gear and barding, mounts and costs, plus travel flavor.
+featured_image: /images/KnightsCharging.webp
 draft: false
 showToc: false
+tags:
+  - Shadowdark
+  - Mechanics
+  - House Rules
+  - RPG Resources
 ---
 
 Greetings, brave crawlers! Whether you're charging into battle, making daring escapes, or simply looking for a reliable way to haul your hard-earned loot, mounts are an essential part of any fantasy adventurer's toolkit. They add a thrilling dimension to gameplay, especially during overland adventures where a simple yet engaging mounted combat system can elevate the excitement of your [Shadowdark](https://www.thearcanelibrary.com/pages/shadowdark) game.
