--- a/content/posts/2024-09-08-worldbuilding-through-food.mdx
+++ b/content/posts/2024-09-08-worldbuilding-through-food.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "worldbuilding-through-food"
-title: "Crafting Cultural Depth Through Food in TTRPGs"
-date: "2024-09-08"
-excerpt: "Learn how to use food descriptions in TTRPGs to create rich, immersive worlds. Practical tips for DMs to enhance cultural worldbuilding through cuisine."
-featured_image: "/images/heroes-feast_1200x757.webp"
+slug: worldbuilding-through-food
+title: Crafting Cultural Depth Through Food in TTRPGs
+date: '2024-09-08'
+excerpt: >-
+  Use cuisine as a storytelling tool: describe dishes, tie meals to rituals,
+  status, and environment, and turn ingredients into hooks for richer play.
+featured_image: /images/heroes-feast_1200x757.webp
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Analysis
 ---
 
 The recent artwork depicting the Hero's Feast spell has sparked a heated debate within the TTRPG community. While some argue that the inclusion of modern dishes like sushi and tacos breaks immersion, others welcome this expansion of the game's aesthetics to make the setting familiar to more people. However, this debate overlooks a powerful worldbuilding tool: using food to create a deeper sense of culture and tradition in our fantasy worlds.
