--- a/content/posts/2024-09-20-ethical-ai-in-ttrpgs.mdx
+++ b/content/posts/2024-09-20-ethical-ai-in-ttrpgs.mdx
@@ -1,11 +1,19 @@
 ---
-slug: "ethical-ai-in-ttrpgs"
-title: "Embracing AI in TTRPGs - Enhancing, Not Replacing, Creativity"
-date: "2024-09-20"
-excerpt: "Explore positive AI applications in TTRPGs. Discover how AI can enhance gameplay, streamline admin tasks, and support creativity without replacing human input."
-featured_image: "/images/ttrpg_players_and_robot_1200x600.webp"
+slug: ethical-ai-in-ttrpgs
+title: 'Embracing AI in TTRPGs - Enhancing, Not Replacing, Creativity'
+date: '2024-09-20'
+excerpt: >-
+  AI can streamline search, lore, prep, and tracking in tabletop play, freeing
+  DMs and players to focus on storytelling while keeping human creativity
+  central.
+featured_image: /images/ttrpg_players_and_robot_1200x600.webp
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Community
+  - Analysis
 ---
 
 The TTRPG community has been abuzz with discussions about AI, and understandably so. The mere mention of artificial intelligence in our beloved hobby often sparks heated debates and anxiety. There's a palpable fear that AI might replace the human creativity that forms the very essence of tabletop roleplaying games. In these discussions, we've sometimes been too quick to judge, too harsh in our criticisms, and perhaps a bit too reactionary. Without doubt, there's Fear, Uncertainty, and Doubt (FUD) surrounding AI, but there are also great possibilities when used thoughtfully. As with many topics in our community, we need to approach the AI conversation with more open-mindedness and less cruelty towards those with differing views. After all, the spirit of TTRPGs is one of collaboration and imagination – qualities we should bring to these important discussions as well.
