--- a/content/posts/2024-10-20-theater-of-the-mind-movement-in-5e.mdx
+++ b/content/posts/2024-10-20-theater-of-the-mind-movement-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "theater-of-the-mind-movement-in-5e"
-title: "Movement in Theater of the Mind for DnD 5e"
-date: "2024-10-20"
-excerpt: "Discover a dynamic system for handling movement in Theater of the Mind gameplay, designed primarily for D&D 5e but adaptable to any TTRPG. This approach emphasizes narrative flow and player agency while maintaining tactical depth."
-featured_image: "/images/pitch_battle_ai_art_800x418.webp"
+slug: theater-of-the-mind-movement-in-5e
+title: Movement in Theater of the Mind for DnD 5e
+date: '2024-10-20'
+excerpt: >-
+  Streamline combat by declaring intentions, using simple ranges, and resolving
+  maneuvers with opposed checks to keep TotM battles fast, tactical, and fun.
+featured_image: /images/pitch_battle_ai_art_800x418.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - House Rules
 ---
 
 As a Dungeon Master, I've always been drawn to the flexibility and imagination-sparking nature of Theater of the Mind (TotM) gameplay. However, at least in grid based systems like D&D 5e, it can be a challenge to account for various elements of the game designed for tactical combat. Additionally, it can be tempting to simply ignore movement when using TotM and miss out on the exciting and dynamic nature of swashbuckling adventures. Today, I want to share a system I've developed that keeps TotM combat dynamic and tactical while avoiding the need to track every 5-foot square. 
