--- a/content/posts/2024-10-24-hasbro-q3-2024.mdx
+++ b/content/posts/2024-10-24-hasbro-q3-2024.mdx
@@ -1,11 +1,16 @@
 ---
-slug: "hasbro-q3-2024"
-title: "The DnD 2024 Launch and the Future of Hasbro"
-date: "2024-10-24"
-excerpt: "Hasbros Q3 2024 report offers a detailed look at their financial performance and strategic direction and teases the future of the DnD brand."
-featured_image: "/images/dnd_record_keeping_1200x600.webp"
+slug: hasbro-q3-2024
+title: The DnD 2024 Launch and the Future of Hasbro
+date: '2024-10-24'
+excerpt: >-
+  A data-driven read of Hasbro’s Q3 shows stable cash and strong margins but D&D
+  2024 underperformed as BG3 fades, pushing a risky digital pivot.
+featured_image: /images/dnd_record_keeping_1200x600.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Analysis
 ---
 
 The financial health of Hasbro frequently sparks intense discussion among Dungeons & Dragons fans. While speculation often trends toward the alarmist, the underlying concern is understandable. Fans have invested heavily in this hobby - not just financially, but with their time, creativity, and emotional energy. They want to understand the stability of the company behind their beloved game, whether the focus is on product quality over brand exploitation, and how corporate decisions might impact the future of their hobby. [Hasbro's Q3 earnings report](https://investor.hasbro.com/news-releases/news-release-details/hasbro-reports-third-quarter-2024-financial-results) offers us a chance to move beyond speculation and examine actual data.
