--- a/content/posts/2024-11-22-warfare-in-ttrpgs.mdx
+++ b/content/posts/2024-11-22-warfare-in-ttrpgs.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "warfare-in-ttrpgs"
-title: "War and Warfare in TTRPGs - How to Bring Epic Conflicts to Life"
-date: "2024-11-22"
-excerpt: "Dive into how to effectively run war scenarios in TTRPGs like D&D, balancing epic battles with personal player agency."
-featured_image: "/images/pitch_battle_ai_art_800x418.webp"
+slug: warfare-in-ttrpgs
+title: War and Warfare in TTRPGs - How to Bring Epic Conflicts to Life
+date: '2024-11-22'
+excerpt: >-
+  Practical guidance for crafting player-driven wartime stories: pitfalls to
+  avoid, scenario types to run, tools to add tension, and moral nuance.
+featured_image: /images/pitch_battle_ai_art_800x418.webp
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - RPG Resources
+  - Analysis
+  - Mechanics
 ---
 
 War. It's the drumbeat of countless fantasy epics, a crucible that forges heroes and shapes kingdoms. From the sweeping battles of *The Lord of the Rings* to Conan's gritty skirmishes, war has always been central to the fantasy genre. Even modern fantasy leans heavily on the backdrop of conflict, often zooming in on the personal stories of individuals caught in its tide.
