--- a/content/posts/2024-11-26-the-human-side-of-dnd-history.mdx
+++ b/content/posts/2024-11-26-the-human-side-of-dnd-history.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "the-human-side-of-dnd-history"
-title: "The Human Side of D&D History"
-date: "2024-11-26"
-excerpt: "A reflection on how the D&D community remembers its creators, sparked by Tim Cains ToEE story and the ongoing discussions about Gary Gygaxs legacy."
-featured_image: "/images/CorpseKing_Gygax_Tweet_screenshot_896x229.webp"
+slug: the-human-side-of-dnd-history
+title: The Human Side of D&D History
+date: '2024-11-26'
+excerpt: >-
+  Reflecting on Tim Cain and Gary Gygax, this calls for empathetic, nuanced
+  remembrance of D&D's creators over meme-fueled narratives.
+featured_image: /images/CorpseKing_Gygax_Tweet_screenshot_896x229.webp
 draft: false
 showToc: false
+tags:
+  - Community
+  - Philosophy
+  - Analysis
 ---
 
 I came across something today that made me reflect deeply on how we, as a community, engage with the people who shaped our hobby. Tim Cain (creator of Fallout and lead at Troika) posted a [heartfelt video](https://www.youtube.com/watch?v=kYg6uz1Gqf4) about his team's work on Temple of Elemental Evil (2003) being omitted from "D&D: Art and Arcana" - the comprehensive art history book from 2018. This got me thinking about how we remember our hobby's creators, particularly in light of the recent online debates about Gary Gygax's legacy and his critisism in the recent D&D publications.
