--- a/content/posts/2025-08-12-this-is-my-new-post.mdx
+++ b/content/posts/2025-08-12-this-is-my-new-post.mdx
@@ -1,11 +1,15 @@
 ---
-slug: "this-is-my-new-post"
-title: "This is my new post"
-date: "2025-08-12"
-excerpt: "A brief description of your post that will appear in previews and summaries."
-tags: ["tag1","tag2","tag3"]
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
-draft: false
+slug: this-is-my-new-post
+title: This is my new post
+date: '2025-08-12'
+excerpt: >-
+  Sample post showcasing Markdown basics with links, images, code, lists,
+  emphasis, blockquotes, tables, headers, and tips for wrapping up content.
+tags:
+  - RPG Resources
+  - Community
+featured_image: /images/optionalrule-exploring-encumbered.webp
+draft: true
 showToc: false
 ---
 
