--- a/content/posts/2020-12-01-character-voices-reference.mdx
+++ b/content/posts/2020-12-01-character-voices-reference.mdx
@@ -1,11 +1,16 @@
 ---
-slug: "character-voices-reference"
-title: "Character Voices Reference"
-date: "2020-12-01"
-excerpt: "Random table for spicing up character and NPC voices in your TTRPG game."
-featured_image: "/images/voicereferencpreview_800x631.jpg"
+slug: character-voices-reference
+title: Character Voices Reference
+date: '2020-12-01'
+excerpt: >-
+  A d100 table of vocal descriptors to inspire varied NPC portrayals and help
+  DMs note and reuse consistent speech styles during play.
+featured_image: /images/voicereferencpreview_800x631.jpg
 draft: false
 showToc: false
+tags:
+  - RPG Resources
+  - DM Advice
 ---
 
 Doing in-character voices is a hit or miss prospect for some games, and by no means required in a table-top RPG. As a DM that enjoys doing voices for various NPCs in my world I find this table helpful to develop different inspiration for voice types I might use, and having a reference like this lets me make a quick note so I can be sure to use the same voice next time. I compiled this list from a few descriptions for theater actors around the web and hope you'll find it useful for your game as well.
