--- a/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
+++ b/content/posts/2021-01-04-rotf-remix-the-far-north-ten-towns.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "rotf-remix-the-far-north-ten-towns"
-title: "RotF Remix: The Far North & Ten-Towns"
-date: "2021-01-04"
-excerpt: "Enhance your 5th edition Rime of the Frostmaiden campaign with these additions to the Ten Towns in Icewind Dale."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: rotf-remix-the-far-north-ten-towns
+title: 'RotF Remix: The Far North & Ten-Towns'
+date: '2021-01-04'
+excerpt: >-
+  Remix adds Icewind Dale politics and Duergar intrigue, caravan hooks, harsher
+  travel and survival rules, and darker Auril sacrifices for 5e.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - Rime of the Frostmaiden
+  - DnD 5e
+  - House Rules
+  - DM Advice
 ---
 
 The Ten-Towns of [Icewind Dale: Rime of the Frostmaiden](https://dnd.wizards.com/products/tabletop-games/rpg-products/icewind-dale-rime-frostmaiden) provide rich plot, roleplaying, and excellent modular encounters for your 5th edition Dungeons and Dragons game. These early adventures setup the core tension of the adventure, and provide some of the most obvious ways to allow heroes make an impact on the region. What follows here are a few updates, changes, or additions to Ten-Towns to spice up your sessions in different ways. The factions section below provide a bit more political context to the adventure, the Sacrifices to Auril section provides a bit more background and context for the dangers faced and how each town is adapting, the Winter Survival Gear and Travel section enhance the survival mechanics in the setting. Like any remix, this is just a skew toward a specific style of running the game, use what you find useful and ignore the rest. Many of these core components setup remixes for individual encounters I will post over time.
