--- a/content/posts/2021-04-02-the-language-of-monsters-in-5e.mdx
+++ b/content/posts/2021-04-02-the-language-of-monsters-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "the-language-of-monsters-in-5e"
-title: "The Language of Monsters in 5e"
-date: "2021-04-02"
-excerpt: "A count and analysis of languages listed for monsters in 5th edition statblocks."
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
+slug: the-language-of-monsters-in-5e
+title: The Language of Monsters in 5e
+date: '2021-04-02'
+excerpt: >-
+  A parsed survey of 799 5e monster stat blocks reveals which tongues appear
+  most, from Common and Draconic to Telepathy and obscure oddities.
+featured_image: /images/optionalrule-exploring-encumbered.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Monsters
+  - Analysis
+  - RPG Resources
 ---
 
 Many monsters in 5th Edition Dungeons & Dragons list a language in their stat block. Aside from its ability to hurl insults in combat, sharing a language can open options for lore or negtiation during play. But which languages to most monsters speak and understand? This isn't an easy question to answer because DnD does not provide their monster stat blocks in an easily parsable format. So I found [The Great DnD 5e Monster Spreadsheet](https://www.reddit.com/r/UnearthedArcana/comments/8zvr6s/the_great_dd5e_monster_spreadsheet/) online, cleaned up the data and began to parse out some of the the answers.
