--- a/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
+++ b/content/posts/2021-04-07-monster-resistance-totals-in-5e.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "monster-resistance-totals-in-5e"
-title: "Monster Resistance Totals in 5e"
-date: "2021-04-07"
-excerpt: "A breakdown and analysis of monster resistances across all the 5th edition monster statblocks."
-featured_image: "/images/optionalrule-exploring-wizard.webp"
+slug: monster-resistance-totals-in-5e
+title: Monster Resistance Totals in 5e
+date: '2021-04-07'
+excerpt: >-
+  Data-driven look at monster weaknesses, resistances, immunities and save
+  proficiencies by CR, with insights for spell choices and encounter design.
+featured_image: /images/optionalrule-exploring-wizard.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Analysis
+  - Mechanics
+  - Monsters
 ---
 
 Taking down monsters in 5th Edition Dungeons & Dragons is arguably what you will spend the most time doing in game. Defeating a creature isn't just a matter of damage, as many monsters will also have Weaknesses (**W**), Resistances (**R**), or Immunities (**I**). Monster with a particular weakness takes double the amount of damage from that type of attack. Likewise, a foe with resistance will only take half the amount of damage from that particular damage type. And in some cases, an enemy that is immune to a particular effect will take no damage at all from it. Therefore, understanding resistances can be a critical element to surviving as an adventurer or planning as a DM. 
