--- a/content/posts/2021-07-24-perilous-journeys-in-5e-p2.mdx
+++ b/content/posts/2021-07-24-perilous-journeys-in-5e-p2.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "perilous-journeys-in-5e-p2"
-title: "Perilous Journeys in 5e Part 2"
-date: "2021-07-24"
-excerpt: "Adding journey actions to make travel exciting again in 5th edition Dungeons & Dragons."
-featured_image: "/images/kirk-langsea-wot-quarry-rox-02_950x534.jpg"
+slug: perilous-journeys-in-5e-p2
+title: Perilous Journeys in 5e Part 2
+date: '2021-07-24'
+excerpt: >-
+  Turn overland travel into engaging play with clear roles—Forage, Guide, Scout,
+  and Ward—plus terrain DCs, party synergies, and encounter-focused pacing.
+featured_image: /images/kirk-langsea-wot-quarry-rox-02_950x534.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - House Rules
+  - Mechanics
 ---
 
 Exciting journeys in 5th edition engage the party and give them meaningful actions as part of the adventure.  Last week I posted [Perilous Journey's Part 1](/2021/07/13/perilous-journeys-in-5e-p1/), which turns travel into a series of encounters like any other dungeon. This week, I'll look at defining some ways that party members can take meaningful actions during journeys.  These **Journey Actions** provide gameplay for the travel experience, as well as create dependencies between members of the party. 
