--- a/content/posts/2021-08-12-sampling-random-ability-scores.mdx
+++ b/content/posts/2021-08-12-sampling-random-ability-scores.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "sampling-random-ability-scores"
-title: "Sampling Random Ability Score Generation"
-date: "2021-08-12"
-excerpt: "Comparing different methods of random ability score generation in your 5th edition game."
-featured_image: "/images/abilityscore_generation_chart_1419x826.jpg"
+slug: sampling-random-ability-scores
+title: Sampling Random Ability Score Generation
+date: '2021-08-12'
+excerpt: >-
+  An overview of popular random stat methods in 5e, their probability ranges,
+  effects on bounded accuracy, and advice for group buy-in.
+featured_image: /images/abilityscore_generation_chart_1419x826.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - DM Advice
+  - Mechanics
+  - Analysis
 ---
 
 Using randomly generated ability scores is a recurring topic on many 5e forums. Although, standard array and point buy are the most common method by far, rolled ability scores is the default method for 5e. Indeed, random ability scores were the standard for most of the history of Dungeons & Dragons,. Point buy was introduced with 3rd edition, and the Standard Array didn't come out until Xanathar's for 5th edition. While I consider standard array better for ensuring parity between players, the appeal of random ability rolls is still there for many.
