--- a/content/posts/2021-12-17-wotc-errata-debate.mdx
+++ b/content/posts/2021-12-17-wotc-errata-debate.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "wotc-errata-debate"
-title: "The WoTC Errata, Long Past Due"
-date: "2021-12-17"
-excerpt: "My take on the recent Wizards of the Coast Dungeons and Dragons 5e errata."
-featured_image: "/images/optionalrule-exploring-encumbered.webp"
+slug: wotc-errata-debate
+title: 'The WoTC Errata, Long Past Due'
+date: '2021-12-17'
+excerpt: >-
+  The latest D&D 5E errata drops racial alignment, inviting more inclusive,
+  nuanced characters and worlds shaped by players and DMs.
+featured_image: /images/optionalrule-exploring-encumbered.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Analysis
+  - Philosophy
+  - Community
 ---
 
 Greetings, adventurers! It's always exciting when the landscape of our beloved game, Dungeons & Dragons (D&D), shifts and morphs, opening up new pathways for our collective imagination. The [latest errata](https://media.wizards.com/2020/dnd/downloads/PH-Errata.pdf) issued for D&D 5E has brought such a change, one that holds significant implications for how we understand and play our favorite tabletop RPG. Among a host of clarifications, there is one change that stands out: the removal of alignment references for races in the Player's Handbook.
