--- a/content/posts/2022-10-01-injured-condition-onednd.mdx
+++ b/content/posts/2022-10-01-injured-condition-onednd.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "injured-condition-onednd"
-title: "Injured Condition For Lasting Damage"
-date: "2022-10-01"
-excerpt: "A simple and quick lasting injuries system for DnD based on the Exhausted playtest."
-featured_image: "/images/camping_party_475x633.jpg"
+slug: injured-condition-onednd
+title: Injured Condition For Lasting Damage
+date: '2022-10-01'
+excerpt: >-
+  A streamlined injury system for 5e applies level-based penalties to rolls and
+  save DCs, with rest, medicine, and magic for recovery plus DM guidance.
+featured_image: /images/camping_party_475x633.jpg
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - House Rules
+  - Mechanics
+  - DM Advice
 ---
 
 Injuries in Dungeons & Dragons are important for two reasons: they add realism to the game and they can be used to add humor. By making injuries last longer, it gives the players a sense of realism and danger that they may not feel if they simply healed back up to full hit points after every battle. It also allows for some interesting role-playing opportunities, such as a character with a permanent limp trying to negotiate a difficult terrain. Finally, it can be fun to see how creative the players can be in dealing with their injuries and add depth to a game.
