--- a/content/posts/2023-06-16-abstract-nature-of-ac.mdx
+++ b/content/posts/2023-06-16-abstract-nature-of-ac.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "abstract-nature-of-ac"
-title: "Decoding D&D - The Enigma of Armor Class"
-date: "2023-06-16"
-excerpt: "Explore the abstraction of Armor Class in D&D, its roots in wargaming, and its dance with Hit Points."
-featured_image: "/images/the_duel_480x720.png"
+slug: abstract-nature-of-ac
+title: Decoding D&D - The Enigma of Armor Class
+date: '2023-06-16'
+excerpt: >-
+  Explains AC as an abstract defense working with HP to pace damage over time,
+  guiding narration and design without literal blow-by-blow realism.
+featured_image: /images/the_duel_480x720.png
 draft: false
 showToc: false
+tags:
+  - Mechanics
+  - DM Advice
+  - Philosophy
+  - Analysis
 ---
 
 Delving into the oft-debated mechanics of Dungeons and Dragons (D&D), it's hard to overlook the perennial discussion points: Armor Class (AC) and Hit Points (HP). While they may seem simple on the surface, these fundamental aspects of D&D often engender misunderstandings and heated debates. Armor Class, though instinctively viewed as a gauge of whether a character is struck or not, is in fact a more abstract concept. Following my recent post [What are HPs in D&D anyway?](/2023/06/02/what-are-hit-points-in-dnd/), it's fitting that we now unpack the intricacies of AC and its symbiotic relationship with HP - the two crucial pillars that underpin the game's combat system.
