--- a/content/posts/2023-12-20-the-magic-of-yes-if.mdx
+++ b/content/posts/2023-12-20-the-magic-of-yes-if.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "the-magic-of-yes-if"
-title: "Yes, if ... the true secret of crafting adventures"
-date: "2023-12-20"
-excerpt: "Discover how flexible D&D rulings enhance gameplay, as a DM turns a players unique counterspell idea into an exciting new adventure."
-featured_image: "/images/A_group_playing_a_TTRPG_togeher_480x581.png"
+slug: the-magic-of-yes-if
+title: 'Yes, if ... the true secret of crafting adventures'
+date: '2023-12-20'
+excerpt: >-
+  Rather than quick yes/no rulings, challenge players with conditional goals
+  that turn edge cases into quests, deepening stakes and shared world.
+featured_image: /images/A_group_playing_a_TTRPG_togeher_480x581.png
 draft: false
 showToc: false
+tags:
+  - DM Advice
+  - Philosophy
+  - DnD 5e
+  - Analysis
 ---
 
 In Dungeons & Dragons, a common practice among Dungeon Masters (DMs) is to hand-wave new rulings for the sake of convenience, or with the belief that they're enhancing the game by simply saying yes. However, I've come to realize that this approach, while seemingly beneficial, may actually be more limiting than many of us think. Simple answers keep things moving but ignore the fundamental truth about creating adventures. Running a TTRPG isn't just about adjudicating the rules, it's about creating opportunities for characters to risk it all to pursue their goals. Every question asked in a game is an opportunity to create a new adventure, so let's talk a bit about this.
