--- a/content/posts/2024-08-02-simplifying-runequests-critical-system.mdx
+++ b/content/posts/2024-08-02-simplifying-runequests-critical-system.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "simplifying-runequests-critical-system"
-title: "Simplifying Runequest's Critical System"
-date: "2024-08-02"
-excerpt: "Streamline Runequests critical system with a simple pattern. Boost gameplay speed, reduce confusion, and keep the depth. A small tweak for smoother adventures."
-featured_image: "/images/Runequest_480x626.jpg"
+slug: simplifying-runequests-critical-system
+title: Simplifying Runequest's Critical System
+date: '2024-08-02'
+excerpt: >-
+  Proposes a universal 10s/5s critical scheme for Chaosium percentile games to
+  speed resolution, add special failures, and reduce sheet-checking.
+featured_image: /images/Runequest_480x626.jpg
 draft: false
 showToc: false
+tags:
+  - House Rules
+  - Mechanics
+  - Analysis
 ---
 
 I've always been drawn to systems that offer depth and engagement. [Runequest](https://www.chaosium.com/runequest-rpg/), with its skills-based approach, certainly fits the bill. It encourages players to think creatively about their characters' abilities in every situation, rather than waiting for the perfect moment to use a class-specific power as in D&D. However, even the most beloved systems can have their quirks, and for me, Runequest's handling of criticals has always been a sticking point.
