--- a/content/posts/2024-10-01-a-return-to-greyhawk.mdx
+++ b/content/posts/2024-10-01-a-return-to-greyhawk.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "a-return-to-greyhawk"
-title: "Greyhawk - The Original D&D Setting Returns"
-date: "2024-10-01"
-excerpt: "Explore Greyhawks return as D&Ds default setting in 2024. Discover its rich history, unique features, and what it means for players and DMs alike."
-featured_image: "/images/greyhawkmap_1024x585.webp"
+slug: a-return-to-greyhawk
+title: Greyhawk - The Original D&D Setting Returns
+date: '2024-10-01'
+excerpt: >-
+  D&D 2024 brings Greyhawk back as the default setting, exploring its roots,
+  politics, grittier tone, and what it means for DMs and players.
+featured_image: /images/greyhawkmap_1024x585.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Lore
+  - Analysis
 ---
 
 When you're leafing through the pages of the upcoming [Dungeon Master's Guide](https://www.youtube.com/watch?v=xWNT9N3cE2U&t=1s), set to hit shelves this November as part of D&D 2024. The familiar scent of fresh ink and new possibilities filling the air, you might notice something different. The default setting isn't the Forgotten Realms in the latest edition. Instead, you're reading about a world called Greyhawk. For some of you, this name might spark a nostalgic gleam in your eye. For others, it might be a curious first encounter. So what is with the new default setting for DnD 2024? Lets take a journey to the [World of Greyhawk](https://greyhawkonline.com/), D&D's original campaign setting, and find out what we're in for.
