--- a/content/posts/2024-11-24-exception-based-dnd-design.mdx
+++ b/content/posts/2024-11-24-exception-based-dnd-design.mdx
@@ -1,11 +1,18 @@
 ---
-slug: "exception-based-dnd-design"
-title: "Exception Based Design in D&D - When Rules Enable Rule Lawyers"
-date: "2024-11-24"
-excerpt: "Explore how D&D 5es exception-based design affects table dynamics and player behavior, with tips for better game flow and group harmony"
-featured_image: "/images/unfrozen_barbarian_lawyer_480x856.webp"
+slug: exception-based-dnd-design
+title: Exception Based Design in D&D - When Rules Enable Rule Lawyers
+date: '2024-11-24'
+excerpt: >-
+  5e 2024’s exception-heavy design can fuel rules debates; here’s how DMs and
+  players can balance rulings, fun, and table expectations.
+featured_image: /images/unfrozen_barbarian_lawyer_480x856.webp
 draft: false
 showToc: false
+tags:
+  - DnD 5e
+  - Analysis
+  - DM Advice
+  - Philosophy
 ---
 
 With the slow rollout of the 2024 edition of Duneon & Dragons 5e, there's been considerable discussion about the game's underlying design philosophy and how it shapes player behavior at the table. While every edition has had its share of rules lawyers, the current design trajectory might actually be encouraging more rules-focused play - and not always in ways that enhance the experience.
