--- a/content/posts/2025-02-02-the-zero-sum-fallacy-of-ttrpgs.mdx
+++ b/content/posts/2025-02-02-the-zero-sum-fallacy-of-ttrpgs.mdx
@@ -1,11 +1,17 @@
 ---
-slug: "the-zero-sum-fallacy-of-ttrpgs"
-title: "The Zero-Sum Fallacy of TTRPG Playstyles"
-date: "2025-02-02"
-excerpt: "The zero-sum fallacy of TTRPG playstyles and how it harms the hobby."
-featured_image: "/images/optionalrule-exploring-monster.webp"
+slug: the-zero-sum-fallacy-of-ttrpgs
+title: The Zero-Sum Fallacy of TTRPG Playstyles
+date: '2025-02-02'
+excerpt: >-
+  Reject the win-lose mindset and celebrate diverse TTRPG playstyles; curiosity
+  over gatekeeping turns debate into discovery and keeps the hobby welcoming.
+featured_image: /images/optionalrule-exploring-monster.webp
 draft: false
 showToc: false
+tags:
+  - Philosophy
+  - Community
+  - Analysis
 ---
 
 Tabletop roleplaying games (TTRPGs) thrive on diversity. Not just diversity of characters, settings, and mechanics, but diversity of playstyles, preferences, settings, systems, and approaches to the game itself. Yet, despite being a hobby built on creativity and cooperation, the community often finds itself locked in a battle of competing perspectives, treating different approaches to play as if they are in direct opposition.
